まだ全く努力してない箇所：参考文献追加など

--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,6 +1,4 @@
-本章では，システム開発にあたり必要となるヨガセラピーの基礎事項について説明する．
-
-心理療法で，単一ですべてに
+本章では，システム開発にあたり必要となるヨガセラピーの基礎事項について説明する．心理療法で，単一ですべてに
 通じる学派はない．最大の学派は認知行動療法と言われているが，今回提案システムの入力データとして取り扱うヨーガ療法ではアドラー心理学が取り入れられている．アドラー心理学は認知行動
 療法の先駆け的存在として存在しているとされる．行っていることは認知の修正で，同じようなアプローチがとられている．
 
