--- a/chapter4.tex
+++ b/chapter4.tex
@@ -1,58 +1,14 @@
-╦▄╛╧д╟д╧бд╦▄╕ж╡цд╟─є░╞д╣дые╙е╕ехевеы╩м└╧е╖е╣е╞ерд╟═╤дддыевеые┤еъе║ербд╡╗╜╤д╦д─ддд╞╜╥д┘дыбе
+╦▄╛╧д╟д╧бд─є░╞е╖е╣е╞ерд╬е╫еэе╚е┐еде╫д╬│л╚пбддкдшд╙д╜д╬е╫еэе╚е┐еде╫д╦┬╨д╣дыецб╝е╢б╝ележеєе╗ещб╝длдщд╬еье╙ехб╝дЄдтд╚д╦д╖д┐бд─є░╞е╖е╣е╞ер═╫╖я├ъ╜╨д╦д─ддд╞└т╠└д╣дыбе
 
 
-\section{╞■╬╧е╟б╝е┐д╬┴░╜ш═¤}
 
-
-д▐д║╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды╞■╬╧е╟б╝е┐д╦д─ддд╞╜╥д┘дыбе╕х╜╥д╣ды┴┤д╞д╬╝┬╕│д╦дкддд╞бд╞■╬╧е╟б╝е┐д╧╢ж─╠д╖д╞╕х╜╥д╣ды┴┤16╕─д╬е╟б╝е┐дЄ╗╚═╤д╖д┐бе
-
-╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды┬╨╛▌е╟б╝е┐д╦д╧б╓┐┤╬┼╞т▓╩д╦дкд▒ды└▌┐й╛у│▓└ь╠чешб╝ем╬┼╦бе░еыб╝е╫б╫д╬б╓ешб╝ем╬┼╦б╗Ў╬у╕б╞д▓ёб╫╗ё╬┴дЄ╗╚═╤д╖д┐бе═╤ддд┐╗ё╬┴д╬╗Ў╬у╕б╞д▓ёд╬╞№╔╒д╧2014╟п11╖ю11╞№бд
-
-╕х╜╥д╣ды─є░╞е╖е╣е╞ерд╦╞╔д▀╣■д▐д╗дыд┐дсд╬┴░╜ш═¤д╚д╖д╞бдд▐д║бд│╞ележеєе╗еъеєе░▓єд┤д╚д╦е╞ене╣е╚е╟б╝е┐дЄ╩мд▒д┐бе╛░бд2015╟п10╖ю17╞№\cite{txt4}дкдшд╙╞▒╟п11╖ю28╞№\cite{txt5}╗Ў╬у╕б╞д▓ё═╤╗ё╬┴д╦д─ддд╞д╧бдележеєе╗еъеєе░д╖д┐╟пдмб╓X╟пб╫д╚д╖д╞╔·д╗дщдьд╞ддд┐д┐дсбд╦▄╧└╩╕╞тд╟дт░╩╣▀бдд│дьдщ2┼└д╬╗ё╬┴╞тд╦дкд▒дыележеєе╗еъеєе░д╬╟пдЄX╟пд╚╔╜╡нд╣дыбе
-
-
-\begin{itemize}
-\item 2014╟п9╖ю11╞№\cite{txt1}
-\item 2014╟п11╖ю19╞№\cite{txt2}
-\item 2014╟п1╖ю29╞№\cite{txt3}
-\item X╟п8╖ю10╞№\cite{txt4}
-\item X╟п10╖ю1╞№\cite{txt4}
-\item X╟п10╖ю30╞№\cite{txt5}
-\end{itemize}
-2014╟п9╖ю11╞№д╦д─ддд╞д╧епещедеиеєе╚A,Bд╬2╠╛дмддд┐д╬д╟бдд│д╬╞№д╬е╟б╝е┐д╦д─ддд╞д╧д╡дщд╦епещедеиеєе╚д┤д╚д╦е╞ене╣е╚е╟б╝е┐дЄ╩мд▒д┐бед▐д┐д│д╬епещедеиеєе╚Aд╧2014╟п1╖ю29╞№д╬епещедеиеєе╚д╚╞▒░ь┐═╩кбдепещедеиеєе╚Bд╧2014╟п11╖ю19╞№д╬епещедеиеєе╚д╚╞▒░ь┐═╩кд╟двдыбе░╩╣▀бд╦▄╧└╩╕д╦дкддд╞дтд│д╬2╠╛д╬епещедеиеєе╚дЄ╜чд╦епещедеиеєе╚A,Bд╚╕╞д╓бе
-
-░ь╩¤бдX╟п8╖ю10╞№бдX╟п10╖ю1╞№бдX╟п10╖ю30╞№д╟д╧╞▒░ьд╬░ь╠╛д╬епещедеиеєе╚дм┬╨╛▌д╚д╡дьд╞ддд┐бе┬╨╛▌е╟б╝е┐╞тд╟д╧б╓епещедеиеєе╚Aб╫д╚╕╞д╨дьд╞дддыдмбд┴░╜╥д╬епещедеиеєе╚Aд╚д╧╞▒░ь┐═╩кд╟д╧д╩ддд┐дсбд░╩╣▀бд╦▄╧└╩╕├цд╦дкддд╞д╧епещедеиеєе╚Cд╚╕╞д╓д│д╚д╦д╣дыбе
-
-д│д│д╟2014╟п9╖ю11╞№бд2014╟п11╖ю19╞№бд2014╟п1╖ю29╞№д╦дкддд╞д╧ешб╝емд╬т╘┴█┴░д╚ешб╝емд╬т╘┴█╕хд╬е╞ене╣е╚е╟б╝е┐дм┬╕║▀д╖д┐д╬д╟бдт╘┴█┴░╕хд╟╩мд▒д┐е╞ене╣е╚е╟б╝е┐дт═╤░╒д╖д┐бед─д▐дъ
-\begin{itemize}
-\item 2014╟п9╖ю11╞№епещедеиеєе╚A
-\item 2014╟п9╖ю11╞№епещедеиеєе╚Aт╘┴█┴░
-\item 2014╟п9╖ю11╞№епещедеиеєе╚Aт╘┴█╕х
-\item 2014╟п9╖ю11╞№епещедеиеєе╚B
-\item 2014╟п9╖ю11╞№епещедеиеєе╚Bт╘┴█┴░
-\item 2014╟п9╖ю11╞№епещедеиеєе╚Bт╘┴█╕х
-\item 2014╟п11╖ю19╞№епещедеиеєе╚B
-\item 2014╟п11╖ю19╞№епещедеиеєе╚Bт╘┴█┴░
-\item 2014╟п11╖ю19╞№епещедеиеєе╚Bт╘┴█╕х
-\item 2014╟п1╖ю29╞№епещедеиеєе╚A
-\item 2014╟п1╖ю29╞№епещедеиеєе╚Aт╘┴█┴░
-\item 2014╟п1╖ю29╞№епещедеиеєе╚Aт╘┴█╕х
-\item X╟п8╖ю10╞№епещедеиеєе╚C
-\item X╟п10╖ю1╞№епещедеиеєе╚C
-\item X╟п10╖ю30╞№епещедеиеєе╚C
-\end{itemize}
-д╬╖╫15╕─д╬е╞ене╣е╚е╟б╝е┐дЄ═╤░╒д╖д┐бе
-
-д╡дщд╦д│д╬─є░╞е╖е╣е╞ерд╦дкддд╞бд╕х╜╥д╣ды╜щ┤№е░еще╒╔┴▓шдмдвды─°┼┘═н═╤д╩дтд╬длдЄ╝ид╣д┐дсд╦╠╧╡╝е╟б╝е┐дЄ1╕─═╤░╒д╖д┐бе
-
-░╩╛хбд16╕─д╬ележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄд╜дьд╛дьjsonе╒ебедеыд╦╩╤┤╣д╖д┐бе[\{"a":"(╦▄╩╕)"\}]д╬╖┴╝░д╟║ю└од╖д┐бе
 
 \section{─є░╞е╖е╣е╞ерд╬е╫еэе╚е┐еде╫│л╚п}
 
 
 
 
-╝бд╦бд┴░е╗епе╖ечеєд╟┴░╜ш═¤д╖д┐╕хд╬jsonе╟б╝е┐дЄбд─є░╞е╖е╣е╞ердмд╔дж╜ш═¤д╣дыдлдЄ└т╠└д╣дыбе─є░╞е╖е╣е╞ерд╬е╣епеъб╝еєе╖ече├е╚дЄ┐▐\ref{fig:systemtsukaikata}д╦╝ид╣бе
+ележеєе╗еъеєе░╜ёдн╡пд│д╖е╞ене╣е╚дЄ╝б╛╧д╟╜╥д┘ды┴░╜ш═¤дЄ╗▄д╖д┐╕хд╬jsonе╟б╝е┐дЄбд─є░╞е╖е╣е╞ерд╬е╫еэе╚е┐еде╫д╦╞■╬╧д╖д╞бд╦▄е╫еэе╚е┐еде╫дмд╔дж╜ш═¤д╣дыдлдЄ└т╠└д╣дыбее╫еэе╚е┐еде╫╞░║ю▓ш╠╠д╬д╬е╣епеъб╝еєе╖ече├е╚дЄ┐▐\ref{fig:systemtsukaikata}д╦╝ид╣бе
  \begin{figure}
    \begin{center}
      \includegraphics[width=\linewidth,angle=90]{systemtsukaikata.png}
@@ -79,11 +35,6 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 └╤д▀╜┼д═└▐дь└■е░еще╒д╦╜┼д╩д├д╞дддыбд╗ч┐зд╩ддд╖╟╗дде░еьб╝┐зд╬╜─╦└д╧бдележеєе╗ещб╝д╬╝┴╠ф╞т═╞д╬╖┴┬╓дЄ╝ид╣бе╗ч┐зд╧5W1Hб╓ддд─б╫б╓д╔д│д╟б╫б╓├пдмб╫б╓▓┐дЄб╫б╓д╔д╬дшджд╦б╫б╓д╔джд╖д┐б╫д╩д╔д╟╠фдядьдыдшджд╩б╓│лдлдьд┐╝┴╠фб╫бд╟╗дде░еьб╝┐зд╧Yes/Noд╟┼·дидщдьдыбддвдыддд╧░ь╕└д└д▒д╟┤╩├▒┼·дидщдьдыдшджд╩б╓╩─д╕дщдьд┐╝┴╠фб╫дЄ╔╜╕╜д╖д╞дддыбе┬ш1╛╧д╟╜╥д┘д┐─╠дъбдепещедеиеєе╚дм▓┐д╦╠ф┬ъ░╒╝▒дЄ┤╢д╕д╞дддыдлдЄележеєе╗еъеєе░д╟░·дн╜╨д╣д╦д╧бдележеєе╗ещб╝д╧б╓╩─д╕дщдьд┐╝┴╠фб╫дшдъдтб╓│лдлдьд┐╝┴╠фб╫дЄд╖д┐д█дждмдшддд╚д╡дьд╞дддыбе
-%д│д╬е╖е╣е╞ерд╦дкддд╞бд
-
-%\subsection{╖ы▓╠}
-
-
 ╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1mogi2}бд2014╟п11╖ю╕б╞д▓ё епещедеиеєе╚Aт╘┴█╕хд╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1a0911go}бд2015╟п11╖ю╕б╞д▓ё епещедеиеєе╚Cд╬е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1_1002}д╦╝ид╣бе
  \begin{figure}
    \begin{center}
@@ -312,19 +263,19 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
-2016╟п1╖юд╬б╓┐┤д╬▓─╗ы▓╜╕ж╡ц▓ёб╫д╦д╞бд12╠╛д╬└ь╠ч▓╚д╦╦▄е╖е╣е╞ердЄ╕лд╞ддд┐д└днбде│есеєе╚дЄддд┐д└ддд┐бед╜д╬е│есеєе╚дЄ╕╡д╦бв░╩▓╝д╦╜╥д┘дые╖е╣е╞ер═╫╖ядЄ├ъ╜╨д╖д┐бе
+2016╟п1╖юд╬б╓┐┤д╬▓─╗ы▓╜╕ж╡ц▓ёб╫д╦д╞бд12╠╛д╬└ь╠ч▓╚д╦╦▄е╖е╣е╞ердЄ╕лд╞ддд┐д└днбде│есеєе╚дЄддд┐д└ддд┐бед╜д╬е│есеєе╚дЄ╕╡д╦бд░╩▓╝д╦╜╥д┘дые╖е╣е╞ер═╫╖ядЄ├ъ╜╨д╖д┐бе
+\begin{itemize}
 
-д▐д║бдд╔д│дмд╔д╬╚п╕└дЄ╔╜д╖д╞дддыдлдядлдщд╩ддбдд▐д┐еще╕еке▄е┐еєдм┬┐д╣дод╞е░еще╒дм▓╝д╬╩¤д╦дддп
+\item д╔д│дмд╔д╬╚п╕└дЄ╔╜д╖д╞дддыдлдядлдщд╩ддбдд▐д┐еще╕еке▄е┐еєдм┬┐д╣дод╞е░еще╒дм▓╝д╬╩¤д╦дддп
 д╚дддж╠ф┬ъд╦┬╨д╖д╞д╧бдележеєе╗ещб╝длдщепещедеиеєе╚д╪д╬╝┴╠фдЄ╝ид╣╜─╦└дЄе▐еже╣екб╝е╨б╝д╣дыд│д╚д╦дшд├д╞бд╝■╩╒д╬╚п╕└дЄ╔╜╝ид╣ды╡б╟╜дЄ─╔▓├д╣дыд│д╚д╟▓Є╖шдЄ┐▐дыд┘днд╟двдыбе
 
 
 
 
-╝бд╦бд╕╜╛їд╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╖д╞д█д╖ддд╚дддже│есеєе╚дЄддд┐д└ддд┐бе
+\item ╕╜╛їд╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╖д╞д█д╖ддд╚дддже│есеєе╚дЄддд┐д└ддд┐бе
 
 
-╝бд╦бдеэб╝елеыд╟д╬╞░║юд╦дкддд╞бдеще╕еке▄е┐еє╔╜╝ид╦╠є10╔├╔м═╫д╟двдъбдд╜д╬╖╨▓с╗■┤╓дм╠ф┬ъ╗ыд╡дьд╞ддд┐бе
-
+\item еэб╝елеыд╟д╬╞░║юд╦дкддд╞бдеще╕еке▄е┐еє╔╜╝ид╦╠є10╔├╔м═╫д╟двдъбдд╜д╬╖╨▓с╗■┤╓дм╠ф┬ъ╗ыд╡дьд╞ддд┐бе
 д▐д┐бде╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бед╜д╬╞т═╞д╧╝бд╦╝ид╣дтд╬д╟двдыбеб╓епещедеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└дм╕Є╕▀д╦╕╜дьд╞дддыд╜д╬╛ь╜ъд╟бдепещ
 едеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞╩м╬рд╟дндыдшджд╦д╖д╞ддд┐д└д▒ды
 д╚║о═Ёд╖д╩ддд╟ддддд╬д╟д╣дмбеепещедеиеєе╚д╚ележеєе╗ещб╝д╬╚п╕└дм╩м╬ед╡дьд┐
@@ -336,48 +287,43 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
-╝бд╦бдепещедеиеєе╚д╬╚п╕└д╦д─ддд╞бд░╩▓╝д╬еье╙ехб╝дЄддд┐д└ддд┐бе
-
+\item епещедеиеєе╚д╬╚п╕└д╦д─ддд╞бд╝бд╦╝ид╣еье╙ехб╝дЄддд┐д└ддд┐бе
 б╓б╪╗┼╗Ўб┘д╚дддж├▒╕ьдм╜╨д╞днд╞дтбд
 ░жд╬▓▌┬ъд╚д╖д╞д╬╔╫д╦д─ддд╞д╬д╧д╩д╖дЄд╖д╞дддыд╚днд╧бдд╜д╬е╖е┴ехеиб╝е╖ечеє
 д╟д╧░жд╬▓▌┬ъд╚д╩дъд▐д╣бе╞░╗ьбд╖┴═╞╗ьдт╞▒д╕дпбдд╔д╬▓▌┬ъд╬е╖е┴ехеиб╝е╖ечеє
 д╬├цд╟╗╚═╤д╡дьд╞дддыдлд╟╖шд▐дъд▐д╣д╬д╟бдд│д╬╩м╬р╩¤╦бд╧╔╘┼м┼Ўд╚дддид▐д╣бе
-
 дшд├д╞бд╧├┬ъдмд│д╬г│д─д╬▓▌┬ъд╬д╔дьд╦╞■д├д╞дддыдлбдд╚дддж╩м╬рд╟д╖длд╟дн
 д╩ддд╚╣═дид▐д╣бед─д▐дъбдг▒╩╕дмд╔д╬▓▌┬ъд╦╞■д├д╞дддыдлбдд╚дддж╩м╬рд╩дщд╨дя
 длдъд▐д╣бе
-
 д┐д╚дид╨бдб╪джд┴д╬╔╫д╧╗┼╗Ўд╦дддпд╬дЄ╖∙дмд├д╞бд╦ш─л╡пднд╞д│д╩дддєд╟д╣бе
 д╜дьдЄ╕лд╞дддыд└д▒д╟╩вдм╬йд─дєд╟д╣бе╝л╩мд╬╞▒╬╜дм╞▒д╕дшджд╦╗┼╗Ўд╦╣╘днд┐дм
 дщд╩дпд╞─л╡пднд╩длд├д┐д╚дддж╧├дЄ╩╣ддд╞дтбдд╡д█д╔╩вд╧╬йд┴д▐д╗дєдмбд╔╫дмд╜
 джд╩дыд╬д╧└ф┬╨д╦╡Ўд╗д╩ддбкбкб┘д╚дддждшджд╩╩╕╛╧д╟д╣бе║╟╜щд╬╩╕д╧░жд╬▓▌┬ъбд
 ┬шг▓╩╕д╧╗┼╗Ўд╬▓▌┬ъбд╔╫дмд╜джд╩дыд╬д╧└ф┬╨╡Ўд╗д╩ддбкбкд╧░жд╬▓▌┬ъд╟д╣б╫
-
 ░╩╛хдлдщбд├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦╩╤╣╣д╣дыд│д╚дм╡сдсдщдьдыбе
 
-╝бд╦бдележеєе╗ещб╝д╬╚п╕└д╬╩м╬р├▒░╠д╦д─ддд╞бд
+\item ележеєе╗ещб╝д╬╚п╕└д╬╩м╬р├▒░╠д╦д─ддд╞бд
 д▐д║бдепещедеиеєе╚длдщд╬╩╓┼·д└д▒д╟д╩дпбдележеєе╗ещб╝д╬╝┴╠ф╢ш╩мд▒дт╝ъ╞░д╟╜д└╡д╖д┐ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
-
 д▐д┐бдележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞бдб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓▓Є╝сб╫б╓┴ъ─╚б╫б╓└д┤╓╧├б╫д╚дддж╩м╬рдЄ─╔▓├д╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
 
 
-╝бд╦бд
+\item 
 ╕╢╩╕длдщбдележеєе╗ещб╝длдщепещедеиеєе╚д╪д╬╝┴╠ф╗Ў╣рд╬╩м╬рд╬╗╪╔╕д╚д╖д╞бдепещедеиеєе╚д╬╚п╕└дЄджд╩дмд╖д╞епещедеиеєе╚╝л┐╚дт╡дд┼ддд╞ддд╩длд├д┐д│д╚дЄ╟з├╬д╡д╗дыд╬дм┬ч╗Ўд╟двдыд╬д╟бдд╜дьд╛дьд╬╚п╕└╬╠д╬▓─╗ы▓╜д╬╝┬┴їдЄ└╣дъ╣■дрд┘днд╟двдыд╚╣═дидщдьдыбе
 ╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дф┤╓│╓дЄ╩╤дидыд│д╚дЄ─є░╞д╖д┐д╚д│дэ═▀д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
 
 
-╝бд╦бд
+\item 
 ╩╕╗·┐зд╦д─ддд╞╝бд╬е│есеєе╚дЄддд┐д└ддд┐бе
 б╓╩╕╗·д╬┐зд╟д╣дмбд▓л┐зд╚│е┐зд╧бде╨е├епд╬╟Єд╚длд╓д├д╞╕лдид╦дпдпд╩д├
 д╞дддыд╚╗╫ддд▐д╣бе╗фд╬ете╦е┐б╝д╬е╓еыб╝ещеде╚еле├е╚д╬▒╞╢┴длдтд╖дьд▐д╗дєдмбд
 ╞├д╦▓л┐зд╧╕лдид▐д╗дєд╟д╖д┐бедшд├д╞бд┐здЄ╩╤дид╞ддд┐д└д▒дыд╚╜їдлдъд▐д╣беб╫д╖д┐дмд├д╞бд╦▄е╖е╣е╞ерд╬бд╞├д╦ележеєе╗ещб╝д╦┤╪д╣ды╜─╦└дф╝┬║▌д╬╡н╜╥д╬╔┴▓шд╦дкддд╞▓■┴▒д╣ды╔м═╫дмдвдыбе
 
-╝бд╦бд
+\item 
 └╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞бд╜─╝┤▓г╝┤дм▓┐дЄ╔╜д╖д╞дддыдлдядлдщд╩ддд╬д╟бд╝┤дЄ╔╜╝ид╣дыдшджд╦╡сдсдщдьд┐бе
-
 ║╟╕хд╦бд
 ╩╕╗·д╬┬чднд╡д╦д─ддд╞╝бд╬е│есеєе╚дЄддд┐д└ддд┐беб╓ете╦е┐б╝дм╛од╡дд╛ь╣чбдг▒
 ╠╠д╟╕лдшджд╚д╣дыд╚е╒ейеєе╚е╡еде║дм╢╦дсд╞╛од╡дпд╩дъбд╧╖┤уд╦д╚д├д╞д╧╚╜╩╠╔╘
 ╟╜д╚д╩д├д╞д╖д▐ддд▐д╣бее╒ейеєе╚е╡еде║дЄ╛хд▓дыд│д╚д╧д╟днд▐д╣длбй
 б╫д╖д┐дмд├д╞бде╒ейеєе╚е╡еде║дЄ┬чдндпд╣ды╔м═╫дмдвдыбе
 
+\end{itemize}
