--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,6 +1,4 @@
-前章では提案システムのプロトタイプの開発，およびそのプロトタイプに対するユーザーカウンセラーからのレビューをもとにした，提案システム要件抽出について説明した．
-
-それを受け，抽出した要件をみたした提案システムの開発を行った．このシステムに模擬データを入力した際の描画結果のスクリーンショットを図\ref{fig:ver160203}に示す．本章ではその要件をみたした提案システムの概要について説明する．特に，要件を満たすための視覚的表現(Visual Representation, Visual Design)，ユーザーインタラクションなどを重点的に説明する．
+前章では提案システムのプロトタイプの開発，およびそのプロトタイプに対するユーザーカウンセラーからのレビューをもとにした，提案システム要件抽出について説明した．それを受け，抽出した要件をみたした提案システムの開発を行った．このシステムに模擬データを入力した際の描画結果のスクリーンショットを図\ref{fig:ver160203}に示す．本章ではその要件をみたした提案システムの概要について説明する．
 
  \begin{figure}
 %\begin{landscape}
@@ -16,8 +14,79 @@
 
 
 
+\section{入力データの前処理}
 
-\section{原文表示機能}
+
+まず本論文の実験で用いる入力データについて述べる．前章のプロトタイプと本章の提案システムにおいて，入力データは共通して，下記に述べる全16個のデータを使用した．
+本論文の実験で用いる対象データには「心療内科における摂食障害専門ヨーガ療法グループ」の「ヨーガ療法事例検討会」資料を使用した．用いた資料の事例検討会の日付は2014年11月11日，2015年1月24日，同年3月28日，同年10月17日，同年11月28日のものを使用した．
+後述する提案システムに読み込ませるための前処理として，まず，各カウンセリング回ごとにテキストデータを分けた．尚，2015年10月17日および同年11月28日事例検討会用資料については，カウンセリングした年が「X年」として伏せられていたため，本論文内でも以降，これら2点の資料内におけるカウンセリングの年をX年と表記する．
+
+
+\begin{itemize}
+\item 2014年9月11日カウンセリング（2014年11月11日事例検討会資料より）
+\item 2014年11月19日カウンセリング（2015年1月24日事例検討会資料より）
+\item 2014年1月29日カウンセリング（2015年3月28日事例検討会資料より）
+\item X年8月10日カウンセリング（2015年10月17日事例検討会資料より）
+\item X年10月1日カウンセリング（同上）
+\item X年10月30日カウンセリング（2015年11月28日事例検討会資料より）
+\end{itemize}
+2014年9月11日についてはクライエントA,Bの2名がいたので，この日のデータについてはさらにクライエントごとにテキストデータを分けた．またこのクライエントAは2014年1月29日のクライエントと同一人物，クライエントBは2014年11月19日のクライエントと同一人物である．以降，本論文においてもこの2名のクライエントを順にクライエントA,Bと呼ぶ．
+一方，X年8月10日，X年10月1日，X年10月30日では同一の一名のクライエントが対象とされていた．対象データ内では「クライエントA」と呼ばれているが，前述のクライエントAとは同一人物ではないため，以降，本論文中においてはクライエントCと呼ぶことにする．
+
+ここで2014年9月11日，2014年11月19日，2014年1月29日においてはヨーガの瞑想前とヨーガの瞑想後のテキストデータが存在したので，瞑想前後で分けたテキストデータも用意した．つまり
+\begin{itemize}
+\item 2014年9月11日クライエントA
+\item 2014年9月11日クライエントA瞑想前
+\item 2014年9月11日クライエントA瞑想後
+\item 2014年9月11日クライエントB
+\item 2014年9月11日クライエントB瞑想前
+\item 2014年9月11日クライエントB瞑想後
+\item 2014年11月19日クライエントB
+\item 2014年11月19日クライエントB瞑想前
+\item 2014年11月19日クライエントB瞑想後
+\item 2014年1月29日クライエントA
+\item 2014年1月29日クライエントA瞑想前
+\item 2014年1月29日クライエントA瞑想後
+\item X年8月10日クライエントC
+\item X年10月1日クライエントC
+\item X年10月30日クライエントC
+\end{itemize}
+の計15個のテキストデータを用意した．
+
+さらにこの提案システムにおいて，後述する初期グラフ描画がある程度有用なものかを示すために模擬データを1個用意した．
+以上，16個のカウンセリングの文字起こしテキストデータをそれぞれjsonファイルに変換した．[\{"a":"(本文)"\}]の形式で作成した．
+
+\section{内部アルゴリズム}
+
+
+次に，前セクションで述べた入力データを用いた，本提案システムのアルゴリズムについて説明する．
+まず，ブラウザ上で各テキストのjsonファイルを読み込んで形態素解析する．
+形態素解析には，JavaScript言語の形態素解析ライブラリであるkuromoji.js\cite{kuromojijs}を使用した．
+カウンセリング文字起こしテキストデータを形態素解析し，共起マップなどを描画して「愛」「仕事」「交友」に関連する単語を探す．そこから，カウンセラーからの質問形態と， 「愛」「仕事」「交友」の単語グループの時間経過に沿った分布変化を可視化した．
+
+本システムでは，クライエントないしカウンセラーの一発言を，話者の交代によって判断するものとする．つまり，クライエントの一発言は，カウンセラーが喋り終わってクライエントが喋り始めてから，クライエントが喋り終わってカウンセラーが喋り始めるまでである．また，カウンセラーの一発言は，クライエントが喋り終わってから，あるいはカウンセラーが話を切り出し始めてから，カウンセラーが喋り終わってクライエントが喋り始めるまでである．
+
+jsonファイル内の本文の形式について説明する．全角表示のコロン（：）で話者の交代を認識，全角表示のコロン（：），全角表示の句点（．）ないしクエスチョンマーク（？,?）で文の終わりを認識するよう設定されている．そのため，話者が交代するたびに全角表示のコロン（：）で区切れ目を示さないといけない．
+
+\subsection{積み重ね折れ線グラフ}
+Fig.2において，まず積み重ね折れ線グラフはクライエントの1回1回の発言の中での，アドラー心理学の各カテゴリの分布を可視化している．ただし1回1回の発言は，話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて青色は「仕事関係」，ピンク色は「愛（恋愛・愛関係）」，緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
+横軸は時間軸を表現している．ただし対象データである書き起こしテキストデータからは実際の経過秒数は読み取れないので，読み込ませたデータ内におけるクライエントの発言量の合計に対して
+
+\subsection{カウンセラーの質問を表現する縦棒}
+
+Ericら\cite{taskdriven}は，トピックモデリングによって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．一方本研究では，カウンセラーとクライエントの会話において，クライエントは文ごとに，カウンセラーは発言ごとに描画を行いたい，かつ選択肢表示のためにグラフを省スペースしたいという観点から，カウンセラーの発言を横軸より下に折れ線グラフとして描画するのではなく，クライエントの発言のグループ分布を示す積み重ね折れ線グラフに重ねて縦棒として表示するようにした．
+
+
+積み重ね折れ線グラフに重なっている，紫色ないし濃いグレー色の縦棒は，カウンセラーの質問内容の形態を示す．紫色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，濃いグレー色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」を表現している．第1章で述べた通り，クライエントが何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
+
+
+
+\section{システム要件の達成}
+
+最後に，要件を満たすための視覚的表現(Visual Representation, Visual Design)，ユーザーインタラクションなどを重点的に説明する．
+
+\begin{itemize}
+\item 原文表示機能
 \begin{itemize}
 \item どこがどの発言を表しているかわからない
 \item ラジオボタンが多すぎてグラフが下の方にいく
@@ -26,34 +95,22 @@
 またカウンセラーやクライエントの発言に関するグループ分類を手動訂正するラジオボタンのエリアとまとめて，グラフより下側に文章表示されるようにレイアウト変更を行った．
 
 
-\section{インタラクティブ性}
-インタラクティブ性がない，積み重ね折れ線グラフが描画された後にラジオボタンを変えてもインタラクティブに積み重ね折れ線グラフが変更されないという問題に対して，描画後にラジオボタンを変えると即時にグラフ描画に変更適用されるように改良を行った．
+\item インタラクティブ性がない，積み重ね折れ線グラフが描画された後にラジオボタンを変えてもインタラクティブに積み重ね折れ線グラフが変更されないという問題に対して，描画後にラジオボタンを変えると即時にグラフ描画に変更適用されるように改良を行った．
 
-\section{ラジオボタン表示までの必要時間}
-ローカルでの動作において，ラジオボタン表示に約10秒必要であり，その経過時間が問題視されていた．それを受け，今回はプログラム上の無駄な記述を省くことで約5秒に短縮した．
+\item ローカルでの動作において，ラジオボタン表示に約10秒必要であり，その経過時間が問題視されていた．それを受け，今回はプログラム上の無駄な記述を省くことで約5秒に短縮した．
 
-\section{クライエントの発言の分類単位}
-クライエントの発言について単語単位ではなく文単位で「愛」「交友」「仕事」を分類するように変更を行った．
+\item クライエントの発言について単語単位ではなく文単位で「愛」「交友」「仕事」を分類するように変更を行った．
 
-\section{カウンセラーの発言の分類単位}
-カウンセラーの発言について，「開かれた質問」「閉じられた質問」だけでなく，「解釈」「相槌」「世間話」という分類を追加してほしいというレビューをいただいたので，追加を行った．
+\item カウンセラーの発言について，「開かれた質問」「閉じられた質問」だけでなく，「解釈」「相槌」「世間話」という分類を追加してほしいというレビューをいただいたので，追加を行った．ここで，積み重ね折れ線グラフの初期描画の際の分類行程について説明する．この行程について簡単に説明した図を，図5.1に示す．まず「いつ」「どこ」「何」などのいわゆる5W1Hを示す疑問詞をもつ発言を「開かれた質問」に分類する．次に残りの発言のうち，単語数が５個以下のものを「相槌」に分類する．さらに残りの発言のうち終助詞「か」を含む発言を「閉じられた質問」に分類する．今までの３つに分類されなかったものは「解釈」か「世間話」に分類されるわけだが，終助詞の「ね」を含むものを「解釈」，含まないものを「世間話」とした．
 
-ここで，積み重ね折れ線グラフの初期描画の際の分類行程について説明する．この行程について簡単に説明した図を，図5.1に示す．まず「いつ」「どこ」「何」などのいわゆる5W1Hを示す疑問詞をもつ発言を「開かれた質問」に分類する．次に残りの発言のうち，単語数が５個以下のものを「相槌」に分類する．さらに残りの発言のうち終助詞「か」を含む発言を「閉じられた質問」に分類する．今までの３つに分類されなかったものは「解釈」か「世間話」に分類されるわけだが，終助詞の「ね」を含むものを「解釈」，含まないものを「世間話」とした．
-
-\section{分量に応じた縦棒の太さや間隔}
-
-分量に応じて縦棒の太さや間隔を変えることを提案した．
+\item 分量に応じて縦棒の太さや間隔を変えることを提案した．
 
 
-\section{文字色の改善}
-文字色の改善が求められていたが，文字色黒い文字を色のついた墨つきかっこ【】で囲うようにした．
+\item 文字色の改善が求められていたが，文字色黒い文字を色のついた墨つきかっこ【】で囲うようにした．
 
-\section{軸の表示}
-積み重ね折れ線グラフにおいて，軸を表示するようにした．横軸の単位は入力したテキストデータの中でのクライエントの全ての発言の全ての文字数，縦軸の単位はクライエントの各発言の中で「愛」「交友」「仕事」のどのグループに分類される文の数が何文あるかである．
+\item 積み重ね折れ線グラフにおいて，軸を表示するようにした．横軸の単位は入力したテキストデータの中でのクライエントの全ての発言の全ての文字数，縦軸の単位はクライエントの各発言の中で「愛」「交友」「仕事」のどのグループに分類される文の数が何文あるかである．
 
 
 
-\section{ラジオボタンの表示}
-プロトタイプでは，クライエントの発言に関する選択肢がすべて表示された後にカウンセラーに関する発言が表示されるようになっていた．しかしそれではわかりづらいというレビューをもとに，元のテキストデータ通りの順番に並ぶように変更した．
-
-また，全ての文においてあらかじめ選択肢のラジオボタンが表示されていると非常に見づらいので，複数の選択肢の可能性があるとシステムで判断したものについてのみあらかじめ選択肢のラジオボタンを表示し，それ以外に関してはラジオボタンエリア内のその該当箇所の文章をクリックすることで折りたたまれていた選択肢ラジオボタンがすぐ下に表示されるようにした．
+\item プロトタイプでは，クライエントの発言に関する選択肢がすべて表示された後にカウンセラーに関する発言が表示されるようになっていた．しかしそれではわかりづらいというレビューをもとに，元のテキストデータ通りの順番に並ぶように変更した．また，全ての文においてあらかじめ選択肢のラジオボタンが表示されていると非常に見づらいので，複数の選択肢の可能性があるとシステムで判断したものについてのみあらかじめ選択肢のラジオボタンを表示し，それ以外に関してはラジオボタンエリア内のその該当箇所の文章をクリックすることで折りたたまれていた選択肢ラジオボタンがすぐ下に表示されるようにした．
+\end{itemize}
