--- a/chapter6.tex
+++ b/chapter6.tex
@@ -9,7 +9,7 @@
 またプロトタイプから前章の提案システムへの変更についても概ね好評価をいただいている．
 
 
-本システムの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存ないし出力する機能が求められている．こレに関しては，
+本システムの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存ないし出力する機能が求められている．これに関しては，
 
 「長い文章ですので，その日
 だけの使用では終わらないことが多いため」
