--- a/chapter2.tex
+++ b/chapter2.tex
@@ -10,9 +10,7 @@ KH Coderд╚д╧бде╞ене╣е╚╩╕╛╧╖┐д╬е╟б╝е┐дЄ┼¤╖╫╩м└╧д╣дыд┐дсд╬е╒еъб╝д╬е╜е╒е╚ежезевд╟дв
 
 %\subsection{├▒╕ь╢ж╡пе═е├е╚еяб╝еп┐▐}
 
-KH Coderд╧бд┼¤╖╫╖╫╗╗д╚е░еще╒еге├епе╣д╬д┐дсд╬┤─╢нб╓Rб╫дЄ╞т╔Їд╟▓Є└╧д╦═°═╤д╖д╞дддыбе
-
-KH Coderд╟╖┴┬╓┴╟▓Є└╧╕хд╬е╟б╝е┐д╬╢ж╡пе═е├е╚еяб╝еп▓─╗ы▓╜дЄ╣╘джд╦двд┐дъбдд╔д│длдщд╔д│д▐д╟д╬╚╧░╧╞тд╟╢ж╡пд╣дьд╨╢ж╡п╚╜─ъдЄ╣╘дждлд╚дддж╜╕╖╫├▒░╠дЄKH Coder╛хд╟└▀─ъ▓─╟╜д╟двдыбеKH Coderд╧▓■╣╘д╦дшд├д╞├╩═юдЄ╟з╝▒д╖бд╢ч┼└д╦дшд├д╞╩╕дЄ╟з╝▒д╣дыбедшд├д╞д╥д╚├╩═юд╩ддд╖░ь╩╕дЄ╜╕╖╫├▒░╠д╚д╖д╞└▀─ъд╣дыд│д╚дм▓─╟╜д╦д╩д├д╞дддыбе\cite{manu}
+KH Coderд╧бд┼¤╖╫╖╫╗╗д╚е░еще╒еге├епе╣д╬д┐дсд╬┤─╢нб╓Rб╫дЄ╞т╔Їд╟▓Є└╧д╦═°═╤д╖д╞дддыбеKH Coderд╟╖┴┬╓┴╟▓Є└╧╕хд╬е╟б╝е┐д╬╢ж╡пе═е├е╚еяб╝еп▓─╗ы▓╜дЄ╣╘джд╦двд┐дъбдд╔д│длдщд╔д│д▐д╟д╬╚╧░╧╞тд╟╢ж╡пд╣дьд╨╢ж╡п╚╜─ъдЄ╣╘дждлд╚дддж╜╕╖╫├▒░╠дЄKH Coder╛хд╟└▀─ъ▓─╟╜д╟двдыбеKH Coderд╧▓■╣╘д╦дшд├д╞├╩═юдЄ╟з╝▒д╖бд╢ч┼└д╦дшд├д╞╩╕дЄ╟з╝▒д╣дыбедшд├д╞д╥д╚├╩═юд╩ддд╖░ь╩╕дЄ╜╕╖╫├▒░╠д╚д╖д╞└▀─ъд╣дыд│д╚дм▓─╟╜д╦д╩д├д╞дддыбе\cite{manu}
 
 KH Coderд╬е╟есеъе├е╚д╚д╖д╞бд
 \begin{itemize}
@@ -73,6 +71,4 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 ░ь╩¤╦▄╕ж╡цд╟д╧бдележеєе╗ещб╝д╚епещедеиеєе╚д╬▓ё╧├д╦дкддд╞бд╞├д╦ележеєе╗ещб╝д╬╝┴╠фд╬╝я╬р╩мд▒дЄдддлд╦╔┴▓шд╣дыдлдм╜┼═╫д╚д╩дыбеележеєе╗ещб╝д╬╝┴╠фд╬╝я╬рд╦▒■д╕д╞дддлд╦епещедеиеєе╚д╬▓є┼·дЄ░·дн╜╨д╗дыдлдЄ▓─╗ы▓╜д╣дыд│д╚дм╜┼═╫д╟двдыдмбдележеєе╗ещб╝д╬╝┴╠фд╚д╜дьд╦┬╨д╣дыепещедеиеєе╚д╬▓є┼·д╧╕Є╕▀д╦╜╨╕╜д╣дыд╬д╟бдд╜д╬╛Ё╩єдЄ┤▐дсд╞дддлд╦╔┴▓шд╣дыдлдм╜┼═╫д╟двдыбе
 
-д╜д│д╟─є░╞е╖е╣е╞ерд╚д╖д╞бдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ье░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бед╩дкбдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╚дддж├▒╕ье░еыб╝е╫д╬╩мд▒╩¤д╧бд╦▄─є░╞е╖е╣е╞ерд╬╞■╬╧е╟б╝е┐д╚д╖д╞╝шдъ░╖д├д┐ешеме╗еще╘б╝дм┤Ё╦▄д╚д╖д╞дддыбдеве╔ещб╝┐┤═¤│╪д╦═│═шд╣дыдтд╬д╟двдыдмбдд╜дьд╦д─ддд╞д╧╝б╛╧д╟╛▄д╖дп╜╥д┘дыбе├▒╕ье░еыб╝е╫д╬▓─╗ы▓╜д╦двд┐д├д╞д╧бдележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╖д╞▓╛д╬╩м╬р╖ы▓╠д╚д╖д╞е░еще╒дЄ─є╝ид╣дыбед╜д╬╛хд╟бдеще╕еке▄е┐еєд╦дшд├д╞б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬╩м╬рдЄ╩╤╣╣д╣дыд│д╚дм╜╨═шдыдшджд╦д╖д┐бе
-
-╝б╛╧д╟д╧д╔д╬дшджд╦е╖е╣е╞ердЄ╣╜└од╖д┐длд╦д─ддд╞╜╥д┘дыбе
+д╜д│д╟─є░╞е╖е╣е╞ерд╚д╖д╞бдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ье░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бед╩дкбдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╚дддж├▒╕ье░еыб╝е╫д╬╩мд▒╩¤д╧бд╦▄─є░╞е╖е╣е╞ерд╬╞■╬╧е╟б╝е┐д╚д╖д╞╝шдъ░╖д├д┐ешеме╗еще╘б╝дм┤Ё╦▄д╚д╖д╞дддыбдеве╔ещб╝┐┤═¤│╪д╦═│═шд╣дыдтд╬д╟двдыдмбдд╜дьд╦д─ддд╞д╧╝б╛╧д╟╛▄д╖дп╜╥д┘дыбе├▒╕ье░еыб╝е╫д╬▓─╗ы▓╜д╦двд┐д├д╞д╧бдележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╖д╞▓╛д╬╩м╬р╖ы▓╠д╚д╖д╞е░еще╒дЄ─є╝ид╣дыбед╜д╬╛хд╟бдеще╕еке▄е┐еєд╦дшд├д╞б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬╩м╬рдЄ╩╤╣╣д╣дыд│д╚дм╜╨═шдыдшджд╦д╖д┐бе╝б╛╧д╟д╧д╔д╬дшджд╦е╖е╣е╞ердЄ╣╜└од╖д┐длд╦д─ддд╞╜╥д┘дыбе
