組み合わせて

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -41,7 +41,7 @@ KH Coderのデメリットとして，
 
 原田ら\cite{voistrap}は，マイクの音圧から話者の喋り始めから喋り終わりまでを可視化し，話者ごとの発話量を棒グラフで，発話の重なりを折れ線グラフで可視化したが，カウンセリングにおいてカウンセラーからどのようなクライエントの話題を引き出せたかを可視化するにはクライエントの発言情報とカウンセラーの発言情報の両方をコンパクトに1つのグラフにまとめる方が良いと考える．またカウンセリング書き起こしテキストデータにおいては発話の重なりが分からない．
 
-庄ら\cite{shou}は，Webカウンセリングシステムにおいて，折れ線グラフを用いてクライエントの話題をした．しかし，ビギナーカウンセラーの指導という観点ではビギナーカウンセラーからの発言内容をクライエントの発言内容と同時に可視化しなければならない．
+庄ら\cite{shou}は，Webカウンセリングシステムにおいて，折れ線グラフを用いてクライエントの話題をした．しかし，ビギナーカウンセラーの指導という観点ではビギナーカウンセラーからの発言内容をクライエントの発言内容と組み合わせて可視化しなければならない．
 
 
 Ericら\cite{taskdriven}は，トピックモデリングによって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．パターンを調査することに興味があるユーザーにとって，異なるイベントの時刻が2つのモデルで違ってハイライトされるかどうかについて見ることが重要になるケースがあるとしている．
