--- a/chapter2.tex
+++ b/chapter2.tex
@@ -5,7 +5,7 @@
 KH Coderд╚д╧бде╞ене╣е╚╩╕╛╧╖┐д╬е╟б╝е┐дЄ┼¤╖╫╩м└╧д╣дыд┐дсд╬е╒еъб╝д╬е╜е╒е╚ежезевд╟двдыбеевеєе▒б╝е╚д╬╝л═│╡н╜╥бжедеєе┐е╙ехб╝╡н╧┐бж┐╖╩╣╡н╗Ўд╩д╔бдд╡д▐д╢д▐д╩╝╥▓ё─┤║║е╟б╝е┐дЄ╩м└╧д╣дыд┐дсбд╬й╠┐┤█┬ч│╪д╬╚ї╕¤╣╠░ь╗сдм└й║юд╖д┐дтд╬д╟двдыбе╖╫╬╠е╞ене╣е╚╩м└╧д▐д┐д╧е╞ене╣е╚е▐еде╦еєе░д╬╩¤╦бд╦┬╨▒■д╖д╞ддды\cite{kh1}бе┐∙▒║дщ\cite{kango}д╧└о┐═┤╟╕ю│╪│╡╧└д╬└о─╣╩є╣Ё╜ёд╦KH Coderд╬├▒╕ь╢ж╡пе═е├е╚еяб╝еп┐▐╡б╟╜дЄ┼м═╤д╣дыд│д╚д╟бд└о┐═┤╟╕ю│╪│╡╧└д╦е╫еэе╕езепе╚│╪╜мдЄ║╬═╤д╖д┐╕·▓╠дЄ╠└дщдлд╦д╖д┐бе
 
 
-%░╩▓╝д╦бдKH Coderд╬╝чд╩▓─╗ы▓╜е╖е╣е╞ерд╦д─ддд╞╛╥▓Ёд╣дыбе
+%░╩▓╝д╦бдKH Coderд╬╝чд╩▓─╗ы▓╜е─б╝еыд╦д─ддд╞╛╥▓Ёд╣дыбе
 
 
 %\subsection{├▒╕ь╢ж╡пе═е├е╚еяб╝еп┐▐}
@@ -35,17 +35,17 @@ KH Coderд╬е╟есеъе├е╚д╚д╖д╞бд
 \section{└▐дь└■е░еще╒дЄ═╤ддд┐▓ё╧├д╬▓─╗ы▓╜}
 
 
-%%% д╖длд╖бдд│дьдщд╬╩╕╕ед╟д╧▒▓д╚╟о═в┴ўд╚д╬┤╪╖╕дЄ▓─╗ы▓╜д╖д┐╕хбд┬╨╧├┼кдлд─╧в┬│┼кд╦╝бд╬╩м└╧дЄ╣╘джд│д╚д╬д╟дндые╙е╕ехевеы╩м└╧е╖е╣е╞ерд╬│л╚пд╧╣╘дядьд╞ддд╩ддбе
+%%% д╖длд╖бдд│дьдщд╬╩╕╕ед╟д╧▒▓д╚╟о═в┴ўд╚д╬┤╪╖╕дЄ▓─╗ы▓╜д╖д┐╕хбд┬╨╧├┼кдлд─╧в┬│┼кд╦╝бд╬╩м└╧дЄ╣╘джд│д╚д╬д╟дндые╙е╕ехевеы╩м└╧е─б╝еыд╬│л╚пд╧╣╘дядьд╞ддд╩ддбе
 
-%%% д╜д│д╟╦▄╕ж╡цд╟д╧└шд╦╜╥д┘д┐б╓╩к═¤╬╠д╬┤╪╖╕дм╕лдщдьдыб╫бдб╓еве╦есб╝е╖ечеє╔╜╝и▓─╟╜б╫б╓╝л═│д╩╗ы┼└░▄╞░дм▓─╟╜б╫дЄе╖е╣е╞ер═╫╖яд╚д╖д╞└▀─ъд╖бде╖е╣е╞ер│л╚пдЄ╣╘д├д┐бе
+%%% д╜д│д╟╦▄╕ж╡цд╟д╧└шд╦╜╥д┘д┐б╓╩к═¤╬╠д╬┤╪╖╕дм╕лдщдьдыб╫бдб╓еве╦есб╝е╖ечеє╔╜╝и▓─╟╜б╫б╓╝л═│д╩╗ы┼└░▄╞░дм▓─╟╜б╫дЄе─б╝еы═╫╖яд╚д╖д╞└▀─ъд╖бде─б╝еы│л╚пдЄ╣╘д├д┐бе
 
-╕╢┼─дщ\cite{voistrap}д╧бде▐едепд╬▓╗░╡длдщ╧├╝╘д╬├¤дъ╗╧дсдлдщ├¤дъ╜кдядъд▐д╟дЄ▓─╗ы▓╜д╖бд╧├╝╘д┤д╚д╬╚п╧├╬╠дЄ╦└е░еще╒д╟бд╚п╧├д╬╜┼д╩дъдЄ└▐дь└■е░еще╒д╟▓─╗ы▓╜д╖д┐дмбдележеєе╗еъеєе░д╦дкддд╞ележеєе╗ещб╝длдщд╔д╬дшджд╩епещедеиеєе╚д╬╧├┬ъдЄ░·дн╜╨д╗д┐длдЄ▓─╗ы▓╜д╣дыд╦д╧епещедеиеєе╚д╬╚п╕└╛Ё╩єд╚ележеєе╗ещб╝д╬╚п╕└╛Ё╩єд╬╬╛╩¤дЄе│еєе╤епе╚д╦1д─д╬е░еще╒д╦д▐д╚дсды╩¤дм╬╔ддд╚╣═дидыбед▐д┐ележеєе╗еъеєе░╜ёдн╡пд│д╖е╞ене╣е╚е╟б╝е┐д╦дкддд╞д╧╚п╧├д╬╜┼д╩дъдм╩мдлдщд╩ддбе
+╕╢┼─дщ\cite{voistrap}д╧бде▐едепд╬▓╗░╡длдщ╧├╝╘д╬├¤дъ╗╧дсдлдщ├¤дъ╜кдядъд▐д╟дЄ▓─╗ы▓╜д╖бд╧├╝╘д┤д╚д╬╚п╧├╬╠дЄ╦└е░еще╒д╟бд╚п╧├д╬╜┼д╩дъдЄ└▐дь└■е░еще╒д╟▓─╗ы▓╜д╖д┐бед╖длд╖╦▄╕ж╡цд╟д╧бдележеєе╗еъеєе░д╦дкддд╞ележеєе╗ещб╝длдщд╔д╬дшджд╩епещедеиеєе╚д╬╧├┬ъдЄ░·дн╜╨д╗д┐длд╚ддджбдележеєе╗ещб╝д╚епещедеиеєе╚д╚д╬╚п╕└д╬┬╨▒■дм╜┼═╫д╦д╩дыд╬д╟бдд╦д╧епещедеиеєе╚д╬╚п╕└╛Ё╩єд╚ележеєе╗ещб╝д╬╚п╕└╛Ё╩єд╬╬╛╩¤дЄе│еєе╤епе╚д╦1д─д╬е░еще╒д╦д▐д╚дсды╩¤дм╬╔ддд╚╣═дидыбед▐д┐ележеєе╗еъеєе░дЄ╜ёдн╡пд│д╖д┐е╞ене╣е╚е╟б╝е┐д╦дкддд╞д╧бдд╜д╬╚п╕└д╦▓┐╔├длдлд├д┐длдфбдд╔д│д╟╚п╧├д╬╜┼д╩дъдмдвдыдлдм╩мдлдщд╩ддбе
 
-╛▒дщ\cite{shou}д╧бдWebележеєе╗еъеєе░е╖е╣е╞ерд╦дкддд╞бд└▐дь└■е░еще╒дЄ═╤ддд╞епещедеиеєе╚д╬╧├┬ъдЄд╖д┐бед╖длд╖бде╙еое╩б╝ележеєе╗ещб╝д╬╗╪╞│д╚дддж┤╤┼└д╟д╧е╙еое╩б╝ележеєе╗ещб╝длдщд╬╚п╕└╞т═╞дЄепещедеиеєе╚д╬╚п╕└╞т═╞д╚┴╚д▀╣чдяд╗д╞▓─╗ы▓╜д╖д╩д▒дьд╨д╩дщд╩ддбе
+╛▒дщ\cite{shou}д╧бдWebележеєе╗еъеєе░е─б╝еыд╦дкддд╞бд└▐дь└■е░еще╒дЄ═╤ддд╞епещедеиеєе╚д╬╧├┬ъдЄ▓─╗ы▓╜д╖д┐бед╖длд╖бде╙еое╩б╝ележеєе╗ещб╝д╬╗╪╞│д╚дддж┤╤┼└д╟д╧е╙еое╩б╝ележеєе╗ещб╝длдщд╬╚п╕└╞т═╞д╚епещедеиеєе╚д╬╚п╕└╞т═╞дЄ┴╚д▀╣чдяд╗д╞▓─╗ы▓╜д╖д╩д▒дьд╨д╩дщд╩ддбе
 
 
-Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛х▓╝д╬╚є┬╨╛╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дшд├д╞▓─╗ы▓╜д╖д┐бее╤е┐б╝еєдЄ─┤║║д╣дыд│д╚д╦╢╜╠гдмдвдыецб╝е╢б╝д╦д╚д├д╞бд░█д╩дыеде┘еєе╚д╬╗■╣ядм2д─д╬ете╟еыд╟░уд├д╞е╧едещеде╚д╡дьдыдлд╔дждлд╦д─ддд╞╕лдыд│д╚дм╜┼═╫д╦д╩дые▒б╝е╣дмдвдыд╚д╖д╞дддыбе
-д│д╬╜к╬╗д▐д╟д╦бдете╟еы┴┤┬╬д╟╗■┤╓д╚д╚дтд╦╖╣╕■дЄ╚ц│╙д╣дыд┐дсд╦бдEricдщд╧╚є┬╨╛╬д╬╧├┬ъе╒еэб╝┐▐дЄ║ю└од╖д┐бе
+Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛х▓╝д╬╚є┬╨╛╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дшд├д╞▓─╗ы▓╜д╖д┐беEricдщд╦дшдьд╨бде╤е┐б╝еєдЄ─┤║║д╣ды║▌д╦бд░█д╩дыеде┘еєе╚д╬╗■╣яд╧2д─д╬ете╟еыд╟░уд├д╞е╧едещеде╚д╡дьдыдлд╔дждлд╦д─ддд╞╕лдыд│д╚дм╜┼═╫д╦д╩дые▒б╝е╣дмдвдыбе
+╗■┤╓д╚д╚дтд╦е╚е╘е├еп╩м╔█д╬╩╤▓╜╖╣╕■дЄ╚ц│╙д╣дыд┐дсд╦бдEricдщд╧╚є┬╨╛╬д╬╧├┬ъе╒еэб╝┐▐дЄ║ю└од╖д┐бе
 
 %╝┤дшдъ╛хд╦╕╜дьд╞ддды1д─д╬ете╟еыд╬╧├┬ъд╚▓╝╡нд╬дшджд╦╕лдид╞ддды┬╛д╬ете╟еыд╬╧├┬ъд╟бд2д─д╬ете╟еыдлдщд╬╧├┬ъ╠й┼┘д╧бд▓г╗■┤╓╝┤д╦▒шд├д╞╖╫▓шд╡дьдыбе
 
@@ -69,6 +69,6 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
-░ь╩¤╦▄╕ж╡цд╟д╧бдележеєе╗ещб╝д╚епещедеиеєе╚д╬▓ё╧├д╦дкддд╞бд╞├д╦ележеєе╗ещб╝д╬╝┴╠фд╬╝я╬р╩мд▒дЄдддлд╦╔┴▓шд╣дыдлдм╜┼═╫д╚д╩дыбеележеєе╗ещб╝д╬╝┴╠фд╬╝я╬рд╦▒■д╕д╞дддлд╦епещедеиеєе╚д╬▓є┼·дЄ░·дн╜╨д╗дыдлдЄ▓─╗ы▓╜д╣дыд│д╚дм╜┼═╫д╟двдыдмбдележеєе╗ещб╝д╬╝┴╠фд╚д╜дьд╦┬╨д╣дыепещедеиеєе╚д╬▓є┼·д╧╕Є╕▀д╦╜╨╕╜д╣дыд╬д╟бдд╜д╬╛Ё╩єдЄ┤▐дсд╞дддлд╦╔┴▓шд╣дыдлдм╜┼═╫д╟двдыбе
+░ь╩¤╦▄╕ж╡цд╟д╧бдележеєе╗ещб╝д╚епещедеиеєе╚д╬▓ё╧├д╬┤╪дядъдвдддЄ▓─╗ы▓╜д╣дыбее╙еое╩б╝д╬ележеєе╗ещб╝д╬╝┴╠фд╬╝я╬рд╦▒■д╕д╞дддлд╦епещедеиеєе╚д╬▓є┼·дЄ░·дн╜╨д╗дыдлд╦┬╨д╖д╞е┘е╞ещеєд╬ележеєе╗ещб╝д╧├х╠▄д╖д╞дддыдмбдележеєе╗ещб╝д╬╝┴╠фд╚д╜дьд╦┬╨д╣дыепещедеиеєе╚д╬▓є┼·д╧╕Є╕▀д╦╜╨╕╜д╣дыд╬д╟бдд╜д╬╛Ё╩єдЄ┤▐дсд╩дмдщбдележеєе╗ещб╝д╬╝┴╠фд╬╝я╬р╩мд▒дЄдддлд╦▓─╗ы▓╜д╣дыдлдм╜┼═╫д╟двдыбе
 
-д╜д│д╟─є░╞е╖е╣е╞ерд╚д╖д╞бдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ье░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бед╩дкбдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╚дддж├▒╕ье░еыб╝е╫д╬╩мд▒╩¤д╧бд╦▄─є░╞е╖е╣е╞ерд╬╞■╬╧е╟б╝е┐д╚д╖д╞╝шдъ░╖д├д┐ешеме╗еще╘б╝дм┤Ё╦▄д╚д╖д╞дддыбдеве╔ещб╝┐┤═¤│╪д╦═│═шд╣дыдтд╬д╟двдыдмбдд╜дьд╦д─ддд╞д╧╝б╛╧д╟╛▄д╖дп╜╥д┘дыбе├▒╕ье░еыб╝е╫д╬▓─╗ы▓╜д╦двд┐д├д╞д╧бдележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╖д╞▓╛д╬╩м╬р╖ы▓╠д╚д╖д╞е░еще╒дЄ─є╝ид╣дыбед╜д╬╛хд╟бдеще╕еке▄е┐еєд╦дшд├д╞б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬╩м╬рдЄ╩╤╣╣д╣дыд│д╚дм╜╨═шдыдшджд╦д╖д┐бе╝б╛╧д╟д╧д╔д╬дшджд╦е╖е╣е╞ердЄ╣╜└од╖д┐длд╦д─ддд╞╜╥д┘дыбе
+д╜д│д╟─є░╞е─б╝еыд╚д╖д╞бдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ье░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бед╩дкбдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╚дддж├▒╕ье░еыб╝е╫д╬╩мд▒╩¤д╧бд╦▄─є░╞е─б╝еыд╬╞■╬╧е╟б╝е┐д╚д╖д╞╝шдъ░╖д├д┐ешеме╗еще╘б╝дм┤Ё╦▄д╚д╖д╞дддыбдеве╔ещб╝┐┤═¤│╪д╦═│═шд╣дыдтд╬д╟двдыдмбдд╜дьд╦д─ддд╞д╧╝б╛╧д╟╛▄д╖дп╜╥д┘дыбе├▒╕ье░еыб╝е╫д╬▓─╗ы▓╜д╦двд┐д├д╞д╧бдележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╖д╞▓╛д╬╩м╬р╖ы▓╠д╚д╖д╞е░еще╒дЄ─є╝ид╣дыбед╜д╬╛хд╟бдеще╕еке▄е┐еєд╦дшд├д╞б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬╩м╬рдЄ╩╤╣╣д╣дыд│д╚дм╜╨═шдыдшджд╦д╖д┐бе┬ш4╛╧д╟д╧д╔д╬дшджд╦е─б╝еыдЄ╣╜└од╖д┐длд╦д─ддд╞╜╥д┘дыбе
