--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,5 +1,5 @@
-本章では，システム開発にあたり必要となるヨガセラピーの基礎事項について説明する．心理療法で，単一ですべてに
-通じる学派はない．最大の学派は認知行動療法と言われているが，今回提案システムの入力データとして取り扱うヨーガ療法ではアドラー心理学が取り入れられている．アドラー心理学は認知行動
+本章では，ツール開発にあたり必要となるヨガセラピーの基礎事項について説明する．心理療法で，単一ですべてに
+通じる学派はない．最大の学派は認知行動療法と言われているが，今回提案ツールの入力データとして取り扱うヨーガ療法ではアドラー心理学が取り入れられている．アドラー心理学は認知行動
 療法の先駆け的存在として存在しているとされる．行っていることは認知の修正で，同じようなアプローチがとられている．
 
 
@@ -48,7 +48,7 @@
 %理論的な特徴として，
 %\begin{itemize}
 % \item 人間を分割できない全体として把握し，理性と感情・意識と無意識などの対立を認めないこと
-% \item 客観事実よりも，客観事実に対する個人の主観的認知のシステムを重視すること
+% \item 客観事実よりも，客観事実に対する個人の主観的認知のツールを重視すること
 % \item 精神内界よりも個人とその相手役との対人関係を理解しようとすること
 %\end{itemize}
 %などがあげられる．
@@ -93,4 +93,4 @@
 
 %もうひとつのタスクとして，ビギナーのカウンセラーは閉じられた質問を多く用いる傾向にあるので，ビギナーのカウンセラーを開かれた質問が自由に使えるようになる必要がある．これをチェックできることが求められる．
 
-以上のことをもとに，本研究では，タイムライン形式の時間軸に沿った可視化によって，クライエントとカウンセラーの会話を可視化し，カウンセラーの発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した．次章では本論文の提案システムのプロトタイプの開発，およびそのプロトタイプに対して専門家すなわちカウンセラーからいただいたレビューをもとにした，提案システムに対する要件の抽出について説明する．
+以上のことをもとに，本研究では，タイムライン形式の時間軸に沿った可視化によって，クライエントとカウンセラーの会話を可視化し，カウンセラーの発した質問によって会話の流れがどのように変化するのかを明らかにするWebツールを開発した．次章では本論文の提案ツールのプロトタイプの開発，およびそのプロトタイプに対して専門家すなわちカウンセラーからいただいたレビューをもとにした，提案ツールに対する要件の抽出について説明する．
