--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,11 +1,11 @@
-┴░╛╧д╟д╧─є░╞е╖е╣е╞ерд╬е╫еэе╚е┐еде╫д╬│л╚пбддкдшд╙д╜д╬е╫еэе╚е┐еде╫д╦┬╨д╣дыецб╝е╢б╝ележеєе╗ещб╝длдщд╬еье╙ехб╝дЄдтд╚д╦д╖д┐бд─є░╞е╖е╣е╞ер═╫╖я├ъ╜╨д╦д─ддд╞└т╠└д╖д┐бед╜дьдЄ╝їд▒бд├ъ╜╨д╖д┐═╫╖ядЄд▀д┐д╖д┐─є░╞е╖е╣е╞ерд╬│л╚пдЄ╣╘д├д┐бед│д╬е╖е╣е╞ерд╦╠╧╡╝е╟б╝е┐дЄ╞■╬╧д╖д┐║▌д╬╔┴▓ш╖ы▓╠д╬е╣епеъб╝еєе╖ече├е╚дЄ┐▐\ref{fig:ver160203}д╦╝ид╣бе╦▄╛╧д╟д╧д╜д╬═╫╖ядЄд▀д┐д╖д┐─є░╞е╖е╣е╞ерд╬│╡═╫д╦д─ддд╞└т╠└д╣дыбе
+┴░╛╧д╟д╧─є░╞е─б╝еыд╬е╫еэе╚е┐еде╫д╬│л╚пбддкдшд╙д╜д╬е╫еэе╚е┐еде╫д╦┬╨д╣дыецб╝е╢б╝ележеєе╗ещб╝длдщд╬еье╙ехб╝дЄдтд╚д╦д╖д┐бд─є░╞е─б╝еы═╫╖я├ъ╜╨д╦д─ддд╞└т╠└д╖д┐бед╜дьдЄ╝їд▒бд├ъ╜╨д╖д┐═╫╖ядЄд▀д┐д╖д┐─є░╞е─б╝еыд╬│л╚пдЄ╣╘д├д┐бед│д╬е─б╝еыд╦╠╧╡╝е╟б╝е┐дЄ╞■╬╧д╖д┐║▌д╬╔┴▓ш╖ы▓╠д╬е╣епеъб╝еєе╖ече├е╚дЄ┐▐\ref{fig:ver160203}д╦╝ид╣бе╦▄╛╧д╟д╧д╜д╬═╫╖ядЄд▀д┐д╖д┐─є░╞е─б╝еыд╬│╡═╫д╦д─ддд╞└т╠└д╣дыбе
 
  \begin{figure}
 %\begin{landscape}
    \begin{center}
      \includegraphics[width=\linewidth,angle=90]{ver160203.png}
    \end{center}
-   \caption{─є░╞е╖е╣е╞ерд╬╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠}
+   \caption{─є░╞е─б╝еыд╬╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠}
    \label{fig:ver160203}
 %\end{landscape}
  \end{figure}
@@ -17,9 +17,9 @@
 \section{╞■╬╧е╟б╝е┐д╬┴░╜ш═¤}
 
 
-д▐д║╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды╞■╬╧е╟б╝е┐д╦д─ддд╞╜╥д┘дыбе┴░╛╧д╬е╫еэе╚е┐еде╫д╚╦▄╛╧д╬─є░╞е╖е╣е╞ерд╦дкддд╞бд╞■╬╧е╟б╝е┐д╧╢ж─╠д╖д╞бд▓╝╡нд╦╜╥д┘ды┴┤16╕─д╬е╟б╝е┐дЄ╗╚═╤д╖д┐бе
+д▐д║╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды╞■╬╧е╟б╝е┐д╦д─ддд╞╜╥д┘дыбе┴░╛╧д╬е╫еэе╚е┐еде╫д╚╦▄╛╧д╬─є░╞е─б╝еыд╦дкддд╞бд╞■╬╧е╟б╝е┐д╧╢ж─╠д╖д╞бд▓╝╡нд╦╜╥д┘ды┴┤16╕─д╬е╟б╝е┐дЄ╗╚═╤д╖д┐бе
 ╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды┬╨╛▌е╟б╝е┐д╦д╧б╓┐┤╬┼╞т▓╩д╦дкд▒ды└▌┐й╛у│▓└ь╠чешб╝ем╬┼╦бе░еыб╝е╫б╫д╬б╓ешб╝ем╬┼╦б╗Ў╬у╕б╞д▓ёб╫╗ё╬┴дЄ╗╚═╤д╖д┐бе═╤ддд┐╗ё╬┴д╬╗Ў╬у╕б╞д▓ёд╬╞№╔╒д╧2014╟п11╖ю11╞№бд2015╟п1╖ю24╞№бд╞▒╟п3╖ю28╞№бд╞▒╟п10╖ю17╞№бд╞▒╟п11╖ю28╞№д╬дтд╬дЄ╗╚═╤д╖д┐бе
-╕х╜╥д╣ды─є░╞е╖е╣е╞ерд╦╞╔д▀╣■д▐д╗дыд┐дсд╬┴░╜ш═¤д╚д╖д╞бдд▐д║бд│╞ележеєе╗еъеєе░▓єд┤д╚д╦е╞ене╣е╚е╟б╝е┐дЄ╩мд▒д┐бе╛░бд2015╟п10╖ю17╞№дкдшд╙╞▒╟п11╖ю28╞№╗Ў╬у╕б╞д▓ё═╤╗ё╬┴д╦д─ддд╞д╧бдележеєе╗еъеєе░д╖д┐╟пдмб╓X╟пб╫д╚д╖д╞╔·д╗дщдьд╞ддд┐д┐дсбд╦▄╧└╩╕╞тд╟дт░╩╣▀бдд│дьдщ2┼└д╬╗ё╬┴╞тд╦дкд▒дыележеєе╗еъеєе░д╬╟пдЄX╟пд╚╔╜╡нд╣дыбе
+╕х╜╥д╣ды─є░╞е─б╝еыд╦╞╔д▀╣■д▐д╗дыд┐дсд╬┴░╜ш═¤д╚д╖д╞бдд▐д║бд│╞ележеєе╗еъеєе░▓єд┤д╚д╦е╞ене╣е╚е╟б╝е┐дЄ╩мд▒д┐бе╛░бд2015╟п10╖ю17╞№дкдшд╙╞▒╟п11╖ю28╞№╗Ў╬у╕б╞д▓ё═╤╗ё╬┴д╦д─ддд╞д╧бдележеєе╗еъеєе░д╖д┐╟пдмб╓X╟пб╫д╚д╖д╞╔·д╗дщдьд╞ддд┐д┐дсбд╦▄╧└╩╕╞тд╟дт░╩╣▀бдд│дьдщ2┼└д╬╗ё╬┴╞тд╦дкд▒дыележеєе╗еъеєе░д╬╟пдЄX╟пд╚╔╜╡нд╣дыбе
 
 
 \begin{itemize}
@@ -53,18 +53,18 @@
 \end{itemize}
 д╬╖╫15╕─д╬е╞ене╣е╚е╟б╝е┐дЄ═╤░╒д╖д┐бе
 
-д╡дщд╦д│д╬─є░╞е╖е╣е╞ерд╦дкддд╞бд╕х╜╥д╣ды╜щ┤№е░еще╒╔┴▓шдмдвды─°┼┘═н═╤д╩дтд╬длдЄ╝ид╣д┐дсд╦╠╧╡╝е╟б╝е┐дЄ1╕─═╤░╒д╖д┐бе
+д╡дщд╦д│д╬─є░╞е─б╝еыд╦дкддд╞бд╕х╜╥д╣ды╜щ┤№е░еще╒╔┴▓шдмдвды─°┼┘═н═╤д╩дтд╬длдЄ╝ид╣д┐дсд╦╠╧╡╝е╟б╝е┐дЄ1╕─═╤░╒д╖д┐бе
 ░╩╛хбд16╕─д╬ележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄд╜дьд╛дьjsonе╒ебедеыд╦╩╤┤╣д╖д┐бе[\{"a":"(╦▄╩╕)"\}]д╬╖┴╝░д╟║ю└од╖д┐бе
 
 \section{╞т╔Їевеые┤еъе║ер}
 
 
-╝бд╦бд┴░е╗епе╖ечеєд╟╜╥д┘д┐╞■╬╧е╟б╝е┐дЄ═╤ддд┐бд╦▄─є░╞е╖е╣е╞ерд╬евеые┤еъе║ерд╦д─ддд╞└т╠└д╣дыбе
+╝бд╦бд┴░е╗епе╖ечеєд╟╜╥д┘д┐╞■╬╧е╟б╝е┐дЄ═╤ддд┐бд╦▄─є░╞е─б╝еыд╬евеые┤еъе║ерд╦д─ддд╞└т╠└д╣дыбе
 д▐д║бде╓ещеже╢╛хд╟│╞е╞ене╣е╚д╬jsonе╒ебедеыдЄ╞╔д▀╣■дєд╟╖┴┬╓┴╟▓Є└╧д╣дыбе
 ╖┴┬╓┴╟▓Є└╧д╦д╧бдJavaScript╕└╕ьд╬╖┴┬╓┴╟▓Є└╧ещеде╓ещеъд╟двдыkuromoji.js\cite{kuromojijs}дЄ╗╚═╤д╖д┐бе
 ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бд╢ж╡пе▐е├е╫д╩д╔дЄ╔┴▓шд╖д╞б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╣бед╜д│длдщбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ье░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бе
 
-╦▄е╖е╣е╞ерд╟д╧бдепещедеиеєе╚д╩ддд╖ележеєе╗ещб╝д╬░ь╚п╕└дЄбд╧├╝╘д╬╕Є┬хд╦дшд├д╞╚╜├╟д╣дыдтд╬д╚д╣дыбед─д▐дъбдепещедеиеєе╚д╬░ь╚п╕└д╧бдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсд╞длдщбдепещедеиеєе╚дм├¤дъ╜кдяд├д╞ележеєе╗ещб╝дм├¤дъ╗╧дсдыд▐д╟д╟двдыбед▐д┐бдележеєе╗ещб╝д╬░ь╚п╕└д╧бдепещедеиеєе╚дм├¤дъ╜кдяд├д╞длдщбддвдыддд╧ележеєе╗ещб╝дм╧├дЄ└┌дъ╜╨д╖╗╧дсд╞длдщбдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсдыд▐д╟д╟двдыбе
+╦▄е─б╝еыд╟д╧бдепещедеиеєе╚д╩ддд╖ележеєе╗ещб╝д╬░ь╚п╕└дЄбд╧├╝╘д╬╕Є┬хд╦дшд├д╞╚╜├╟д╣дыдтд╬д╚д╣дыбед─д▐дъбдепещедеиеєе╚д╬░ь╚п╕└д╧бдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсд╞длдщбдепещедеиеєе╚дм├¤дъ╜кдяд├д╞ележеєе╗ещб╝дм├¤дъ╗╧дсдыд▐д╟д╟двдыбед▐д┐бдележеєе╗ещб╝д╬░ь╚п╕└д╧бдепещедеиеєе╚дм├¤дъ╜кдяд├д╞длдщбддвдыддд╧ележеєе╗ещб╝дм╧├дЄ└┌дъ╜╨д╖╗╧дсд╞длдщбдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсдыд▐д╟д╟двдыбе
 
 jsonе╒ебедеы╞тд╬╦▄╩╕д╬╖┴╝░д╦д─ддд╞└т╠└д╣дыбе┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╧├╝╘д╬╕Є┬хдЄ╟з╝▒бд┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦бд┴┤│╤╔╜╝ид╬╢ч┼└б╩беб╦д╩ддд╖епеие╣е┴ечеєе▐б╝епб╩бй,?б╦д╟╩╕д╬╜кдядъдЄ╟з╝▒д╣дыдшдж└▀─ъд╡дьд╞дддыбед╜д╬д┐дсбд╧├╝╘дм╕Є┬хд╣дыд┐д╙д╦┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╢ш└┌дь╠▄дЄ╝ид╡д╩ддд╚ддд▒д╩ддбе
 
@@ -81,7 +81,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
-\section{е╖е╣е╞ер═╫╖яд╬├г└о}
+\section{е─б╝еы═╫╖яд╬├г└о}
 
 ║╟╕хд╦бд═╫╖ядЄ╦■д┐д╣д┐дсд╬╗ы│╨┼к╔╜╕╜(Visual Representation, Visual Design)бдецб╝е╢б╝едеєе┐ещепе╖ечеєд╩д╔дЄ╜┼┼└┼кд╦└т╠└д╣дыбе
 
@@ -112,5 +112,5 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
-\item е╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄдтд╚д╦бд╕╡д╬е╞ене╣е╚е╟б╝е┐─╠дъд╬╜ч╚╓д╦╩┬д╓дшджд╦╩╤╣╣д╖д┐бед▐д┐бд┴┤д╞д╬╩╕д╦дкддд╞двдщдлд╕дс┴к┬Є╗шд╬еще╕еке▄е┐еєдм╔╜╝ид╡дьд╞дддыд╚╚є╛яд╦╕лд┼дщддд╬д╟бд╩г┐Їд╬┴к┬Є╗шд╬▓─╟╜└ндмдвдыд╚е╖е╣е╞ерд╟╚╜├╟д╖д┐дтд╬д╦д─ддд╞д╬д▀двдщдлд╕дс┴к┬Є╗шд╬еще╕еке▄е┐еєдЄ╔╜╝ид╖бдд╜дь░╩│░д╦┤╪д╖д╞д╧еще╕еке▄е┐еєеиеъев╞тд╬д╜д╬│║┼Ў▓╒╜ъд╬╩╕╛╧дЄепеъе├епд╣дыд│д╚д╟└▐дъд┐д┐д▐дьд╞ддд┐┴к┬Є╗шеще╕еке▄е┐еєдмд╣д░▓╝д╦╔╜╝ид╡дьдыдшджд╦д╖д┐бе
+\item е╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄдтд╚д╦бд╕╡д╬е╞ене╣е╚е╟б╝е┐─╠дъд╬╜ч╚╓д╦╩┬д╓дшджд╦╩╤╣╣д╖д┐бед▐д┐бд┴┤д╞д╬╩╕д╦дкддд╞двдщдлд╕дс┴к┬Є╗шд╬еще╕еке▄е┐еєдм╔╜╝ид╡дьд╞дддыд╚╚є╛яд╦╕лд┼дщддд╬д╟бд╩г┐Їд╬┴к┬Є╗шд╬▓─╟╜└ндмдвдыд╚е─б╝еыд╟╚╜├╟д╖д┐дтд╬д╦д─ддд╞д╬д▀двдщдлд╕дс┴к┬Є╗шд╬еще╕еке▄е┐еєдЄ╔╜╝ид╖бдд╜дь░╩│░д╦┤╪д╖д╞д╧еще╕еке▄е┐еєеиеъев╞тд╬д╜д╬│║┼Ў▓╒╜ъд╬╩╕╛╧дЄепеъе├епд╣дыд│д╚д╟└▐дъд┐д┐д▐дьд╞ддд┐┴к┬Є╗шеще╕еке▄е┐еєдмд╣д░▓╝д╦╔╜╝ид╡дьдыдшджд╦д╖д┐бе
 \end{itemize}
