--- a/chapter1.tex
+++ b/chapter1.tex
@@ -10,7 +10,7 @@
 
 ただし現状では，クライエントとビギナーのカウンセラーとのカウンセリング内容を動画で撮影し，その動画書き起こされたカウンセリング内容のテキストデータを，ベテランのカウンセラーらが目で読んで，議論をする，という流れである．そのため，ベテランのカウンセラーが全体を読んでからの各々カウンセリング内容を分析するという流れに，時間を要する．
 
-そこで，本研究では，タイムライン形式の時間軸に沿った可視化によって，クライエントとビギナーのカウンセラーとの会話を可視化するWebシステムを開発した．本提案システムはベテランのカウンセラーをユーザーとして想定した．このシステムをベテランのカウンセラーが使用することによって期待されることは，ベテランからビギナーへのカウンセリング指導において，ビギナーのカウンセラーがクライエントにどのような質問を投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」を引き出したかが，ベテランのカウンセラーにとってすぐにわかることである．
+そこで，本研究では，タイムライン形式の時間軸に沿った可視化によって，クライエントとビギナーのカウンセラーとの会話を可視化するWebツールを開発した．本提案ツールはベテランのカウンセラーをユーザーとして想定した．このツールをベテランのカウンセラーが使用することによって期待されることは，ベテランからビギナーへのカウンセリング指導において，ビギナーのカウンセラーがクライエントにどのような質問を投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」を引き出したかが，ベテランのカウンセラーにとってすぐにわかることである．
 
 
 
@@ -19,5 +19,5 @@
 クライエントからの提出した話題が，どの領域に関するものか，カウンセリングの中でその領域がどのように変わっていくかを分析していくと，そのカウンセリングプロセスがより明確になると考えられる．タイムラインで見ると，最初にクライエントの関心がどこにあったのか，それに対してカウンセラーからの発話で異なった領域に話題が展開した，というような分析も可能になると考えられる．
 
 
-本論文の構成は以下のとおりである．第1章では，本論文の序論である．第2章では，本論文の関連研究を挙げる．第3章では，システム開発にあたり必要になってくるヨガセラピーの競う事項について説明する．第4章では，提案システムのプロトタイプ開発とカウンセラーのフィードバックで最終システムの要件を整理する．第5章では，要件を満たすための視覚的表現(Visual Representation, Visual Design)，ユーザーインタラクションなどについて重点的に説明する．第6章では，前章で説明した提案システムに対してのカウンセラーによる評価について述べる．第7章ではそれに対する考察を述べる．第8章では本論文の結論と本研究が抱える今後の課題について述べる．
+本論文の構成は以下のとおりである．第1章では，本論文の序論である．第2章では，本論文の関連研究を挙げる．第3章では，ツール開発にあたり必要になってくるヨガセラピーの競う事項について説明する．第4章では，提案ツールのプロトタイプ開発とカウンセラーのフィードバックで最終ツールの要件を整理する．第5章では，要件を満たすための視覚的表現(Visual Representation, Visual Design)，ユーザーインタラクションなどについて重点的に説明する．第6章では，前章で説明した提案ツールに対してのカウンセラーによる評価について述べる．第7章ではそれに対する考察を述べる．第8章では本論文の結論と本研究が抱える今後の課題について述べる．
 　
