--- a/chapter4.tex
+++ b/chapter4.tex
@@ -1,19 +1,19 @@
-╦▄╛╧д╟д╧бд─є░╞е╖е╣е╞ерд╬е╫еэе╚е┐еде╫д╬│л╚пбддкдшд╙д╜д╬е╫еэе╚е┐еде╫д╦┬╨д╣дыецб╝е╢б╝ележеєе╗ещб╝длдщд╬еье╙ехб╝дЄдтд╚д╦д╖д┐бд─є░╞е╖е╣е╞ер═╫╖я├ъ╜╨д╦д─ддд╞└т╠└д╣дыбе
+╦▄╛╧д╟д╧бд─є░╞е─б╝еыд╬е╫еэе╚е┐еде╫д╬│л╚пбддкдшд╙д╜д╬е╫еэе╚е┐еде╫д╦┬╨д╣дыецб╝е╢б╝ележеєе╗ещб╝длдщд╬еье╙ехб╝дЄдтд╚д╦д╖д┐бд─є░╞е─б╝еы═╫╖я├ъ╜╨д╦д─ддд╞└т╠└д╣дыбе
 
 
 
 
-\section{─є░╞е╖е╣е╞ерд╬е╫еэе╚е┐еде╫│л╚п}
+\section{─є░╞е─б╝еыд╬е╫еэе╚е┐еде╫│л╚п}
 
 
 
 
-ележеєе╗еъеєе░╜ёдн╡пд│д╖е╞ене╣е╚дЄ╝б╛╧д╟╜╥д┘ды┴░╜ш═¤дЄ╗▄д╖д┐╕хд╬jsonе╟б╝е┐дЄбд─є░╞е╖е╣е╞ерд╬е╫еэе╚е┐еде╫д╦╞■╬╧д╖д╞бд╦▄е╫еэе╚е┐еде╫дмд╔дж╜ш═¤д╣дыдлдЄ└т╠└д╣дыбее╫еэе╚е┐еде╫╞░║ю▓ш╠╠д╬д╬е╣епеъб╝еєе╖ече├е╚дЄ┐▐\ref{fig:systemtsukaikata}д╦╝ид╣бе
+ележеєе╗еъеєе░╜ёдн╡пд│д╖е╞ене╣е╚дЄ╝б╛╧д╟╜╥д┘ды┴░╜ш═¤дЄ╗▄д╖д┐╕хд╬jsonе╟б╝е┐дЄбд─є░╞е─б╝еыд╬е╫еэе╚е┐еде╫д╦╞■╬╧д╖д╞бд╦▄е╫еэе╚е┐еде╫дмд╔дж╜ш═¤д╣дыдлдЄ└т╠└д╣дыбее╫еэе╚е┐еде╫╞░║ю▓ш╠╠д╬д╬е╣епеъб╝еєе╖ече├е╚дЄ┐▐\ref{fig:systemtsukaikata}д╦╝ид╣бе
  \begin{figure}
    \begin{center}
      \includegraphics[width=\linewidth,angle=90]{systemtsukaikata.png}
    \end{center}
-   \caption{─є░╞е╖е╣е╞ерд╬е╣епеъб╝еєе╖ече├е╚}
+   \caption{─є░╞е─б╝еыд╬е╣епеъб╝еєе╖ече├е╚}
    \label{fig:systemtsukaikata}
  \end{figure}
 
@@ -21,7 +21,7 @@
 ╖┴┬╓┴╟▓Є└╧д╦д╧бдJavaScript╕└╕ьд╬╖┴┬╓┴╟▓Є└╧ещеде╓ещеъд╟двдыkuromoji.js\cite{kuromojijs}дЄ╗╚═╤д╖д┐бе
 ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бд╢ж╡пе▐е├е╫д╩д╔дЄ╔┴▓шд╖д╞б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╣бед╜д│длдщбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ье░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бе
 
-╦▄е╖е╣е╞ерд╟д╧бдепещедеиеєе╚д╩ддд╖ележеєе╗ещб╝д╬░ь╚п╕└дЄбд╧├╝╘д╬╕Є┬хд╦дшд├д╞╚╜├╟д╣дыдтд╬д╚д╣дыбед─д▐дъбдепещедеиеєе╚д╬░ь╚п╕└д╧бдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсд╞длдщбдепещедеиеєе╚дм├¤дъ╜кдяд├д╞ележеєе╗ещб╝дм├¤дъ╗╧дсдыд▐д╟д╟двдыбед▐д┐бдележеєе╗ещб╝д╬░ь╚п╕└д╧бдепещедеиеєе╚дм├¤дъ╜кдяд├д╞длдщбддвдыддд╧ележеєе╗ещб╝дм╧├дЄ└┌дъ╜╨д╖╗╧дсд╞длдщбдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсдыд▐д╟д╟двдыбе
+╦▄е─б╝еыд╟д╧бдепещедеиеєе╚д╩ддд╖ележеєе╗ещб╝д╬░ь╚п╕└дЄбд╧├╝╘д╬╕Є┬хд╦дшд├д╞╚╜├╟д╣дыдтд╬д╚д╣дыбед─д▐дъбдепещедеиеєе╚д╬░ь╚п╕└д╧бдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсд╞длдщбдепещедеиеєе╚дм├¤дъ╜кдяд├д╞ележеєе╗ещб╝дм├¤дъ╗╧дсдыд▐д╟д╟двдыбед▐д┐бдележеєе╗ещб╝д╬░ь╚п╕└д╧бдепещедеиеєе╚дм├¤дъ╜кдяд├д╞длдщбддвдыддд╧ележеєе╗ещб╝дм╧├дЄ└┌дъ╜╨д╖╗╧дсд╞длдщбдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсдыд▐д╟д╟двдыбе
 
 jsonе╒ебедеы╞тд╬╦▄╩╕д╬╖┴╝░д╦д─ддд╞└т╠└д╣дыбе┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╧├╝╘д╬╕Є┬хдЄ╟з╝▒бд┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦бд┴┤│╤╔╜╝ид╬╢ч┼└б╩беб╦д╩ддд╖епеие╣е┴ечеєе▐б╝епб╩бй,?б╦д╟╩╕д╬╜кдядъдЄ╟з╝▒д╣дыдшдж└▀─ъд╡дьд╞дддыбед╜д╬д┐дсбд╧├╝╘дм╕Є┬хд╣дыд┐д╙д╦┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╢ш└┌дь╠▄дЄ╝ид╡д╩ддд╚ддд▒д╩ддбе
 
@@ -40,21 +40,21 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
    \begin{center}
      \includegraphics[width=\linewidth,angle=90]{system1mogi2.png}
    \end{center}
-   \caption{─є░╞е╖е╣е╞ерг▒д╬╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠}
+   \caption{─є░╞е─б╝еыг▒д╬╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠}
    \label{fig:system1mogi2}
  \end{figure}
  \begin{figure}
    \begin{center}
      \includegraphics[width=\linewidth,angle=90]{system1a0911go.png}
    \end{center}
-   \caption{─є░╞е╖е╣е╞ерг▒д╬'14╟п11╖ю╕б╞д▓ёAт╘┴█╕хд╟д╬▓─╗ы▓╜╖ы▓╠}
+   \caption{─є░╞е─б╝еыг▒д╬'14╟п11╖ю╕б╞д▓ёAт╘┴█╕хд╟д╬▓─╗ы▓╜╖ы▓╠}
    \label{fig:system1a0911go}
  \end{figure}
  \begin{figure}
    \begin{center}
      \includegraphics[width=\linewidth,angle=90]{system1_1002.png}
    \end{center}
-   \caption{─є░╞е╖е╣е╞ерг▒д╬'15╟п11╖ю╕б╞д▓ёCд╟д╬▓─╗ы▓╜╖ы▓╠}
+   \caption{─є░╞е─б╝еыг▒д╬'15╟п11╖ю╕б╞д▓ёCд╟д╬▓─╗ы▓╜╖ы▓╠}
    \label{fig:system1_1002}
  \end{figure}
 
@@ -83,7 +83,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %╔┴▓ш╕хд╦еще╕еке▄е┐еєдЄ╩╤дид╞дт╚┐▒■дмд╩ддбе╕╜╛їд╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыд│д╚дм╡сдсдщдьд┐бе
 
 %\subsubsection{б╓д╜д╬┬╛б╫}
-%б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбд┴ъ─╚дф└д┤╓╧├дЄб╓д╜д╬┬╛б╫дЄ└▀д▒дыд┘днд╚╣═дидщдьдыбе─є░╞е╖е╣е╞ер1д╦дкддд╞д╧бдб╓д╩д╝б╫б╓▓┐б╫д╩д╔д╬5W1HдЄ┐╓дпдшджд╩╡┐╠ф╗ыдЄ┤▐др╚п╕└дЄб╓│лдлдьд┐╝┴╠фб╫д╚д╖д╞─ъ╡┴д╖бдд╜дь░╩│░дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╚─ъ╡┴д╖д╞ддд┐д╬д╟бд─є░╞е╖е╣е╞ер1д╦дкд▒дыб╓╩─д╕дщдьд┐╝┴╠фб╫дЄд╡дщд╦бд░╩╣▀д╬е╖е╣е╞ерд╦дкддд╞б╓╩─д╕дщдьд┐╝┴╠фб╫д╚б╓д╜д╬┬╛б╫д╦дяд▒ды╔м═╫дмдвдыд╚╣═дидщдьдыбе
+%б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбд┴ъ─╚дф└д┤╓╧├дЄб╓д╜д╬┬╛б╫дЄ└▀д▒дыд┘днд╚╣═дидщдьдыбе─є░╞е─б╝еы1д╦дкддд╞д╧бдб╓д╩д╝б╫б╓▓┐б╫д╩д╔д╬5W1HдЄ┐╓дпдшджд╩╡┐╠ф╗ыдЄ┤▐др╚п╕└дЄб╓│лдлдьд┐╝┴╠фб╫д╚д╖д╞─ъ╡┴д╖бдд╜дь░╩│░дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╚─ъ╡┴д╖д╞ддд┐д╬д╟бд─є░╞е─б╝еы1д╦дкд▒дыб╓╩─д╕дщдьд┐╝┴╠фб╫дЄд╡дщд╦бд░╩╣▀д╬е─б╝еыд╦дкддд╞б╓╩─д╕дщдьд┐╝┴╠фб╫д╚б╓д╜д╬┬╛б╫д╦дяд▒ды╔м═╫дмдвдыд╚╣═дидщдьдыбе
 
 
 %\subsubsection{еще╕еке▄е┐еє╔╜╝и╗■┤╓}
@@ -94,40 +94,40 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
-%\section{─є░╞е╖е╣е╞ерг▓}
+%\section{─є░╞е─б╝еыг▓}
 
 
-%─є░╞е╖е╣е╞ер2д╟└ь╠ч▓╚длдщд╡дьд┐╗╪┼ждЄ╕╡д╦╜д└╡дкдшд╙▓■┴▒дЄ╣╘ддбд─є░╞е╖е╣е╞ер3дЄ║ю└од╖д┐бе
+%─є░╞е─б╝еы2д╟└ь╠ч▓╚длдщд╡дьд┐╗╪┼ждЄ╕╡д╦╜д└╡дкдшд╙▓■┴▒дЄ╣╘ддбд─є░╞е─б╝еы3дЄ║ю└од╖д┐бе
 
 
 
 
-%д│д│д╟д╧╝чд╦бд─є░╞е╖е╣е╞ер2дм╩·дид╞ддд┐╠ф┬ъд╪д╬┬╨╜шд╦д─ддд╞╜╥д┘дыбе
+%д│д│д╟д╧╝чд╦бд─є░╞е─б╝еы2дм╩·дид╞ддд┐╠ф┬ъд╪д╬┬╨╜шд╦д─ддд╞╜╥д┘дыбе
 
 %\subsubsection{д╔д│дмд╔д╬╚п╕└дЄ╔╜д╖д╞дддыдлдядлдщд╩дд}
-%─є░╞е╖е╣е╞ерг▒д╟д╧бдд╔д╬╗■┤╓╝┤║┬╔╕дмд╔д╬╚п╕└дЄ╗╪д╖╝ид╣дл╠└╡нд╖д╞ддд╩длд├д┐бед╜д╬╠ф┬ъдЄ▓Є╖шд╣дыд┐дсд╦бд─є░╞е╖е╣е╞ерг▓д╦дкддд╞д╧бде▐еже╣екб╝е╨б╝д╦дшд├д╞╚п╕└╞т═╞дм╔╜╝ид╡дьды╗┼┴╚д▀дЄ║юд├д┐беележеєе╗ещб╝длдщд╬╝┴╠фд╬╢ш╩мд▒дЄ╝ид╣│╞╜─╦└д╦д─ддд╞бдд╜дьд╛дьд╜д╬╛хдЄе▐еже╣екб╝е╨б╝д╣дыд┐д╙д╦бд└╤д▀╜┼д═└▐дь└■е░еще╒дЄ╔┴▓шд╣дыSVG╬╬░шд╬д╣д░╛хд╦бд│╞б╣д╜д╬╜─╦└дм╗╪д╖╝ид╣ележеєе╗ещб╝длдщд╬╝┴╠фд╦┬╨▒■д╣ды╚п╕└бддкдшд╙бдд╜д╬ележеєе╗ещб╝д╬╚п╕└длдщбдепещедеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└дЄ┤▐дсд╞д╜дьд╛дь┴░╕х3╚п╕└д║д─дЄ╔┴▓шд╣дыдшджд╦е╫еэе░ещерд╖д┐бед─д▐дъбдепещедеиеєе╚д╬╚п╕└дм┴░╕х2╚п╕└д║д─бдележеєе╗ещб╝д╬╚п╕└дм3╚п╕└╔╜╝ид╡дьд╞дддыдшджд╦д╖д┐бе
+%─є░╞е─б╝еыг▒д╟д╧бдд╔д╬╗■┤╓╝┤║┬╔╕дмд╔д╬╚п╕└дЄ╗╪д╖╝ид╣дл╠└╡нд╖д╞ддд╩длд├д┐бед╜д╬╠ф┬ъдЄ▓Є╖шд╣дыд┐дсд╦бд─є░╞е─б╝еыг▓д╦дкддд╞д╧бде▐еже╣екб╝е╨б╝д╦дшд├д╞╚п╕└╞т═╞дм╔╜╝ид╡дьды╗┼┴╚д▀дЄ║юд├д┐беележеєе╗ещб╝длдщд╬╝┴╠фд╬╢ш╩мд▒дЄ╝ид╣│╞╜─╦└д╦д─ддд╞бдд╜дьд╛дьд╜д╬╛хдЄе▐еже╣екб╝е╨б╝д╣дыд┐д╙д╦бд└╤д▀╜┼д═└▐дь└■е░еще╒дЄ╔┴▓шд╣дыSVG╬╬░шд╬д╣д░╛хд╦бд│╞б╣д╜д╬╜─╦└дм╗╪д╖╝ид╣ележеєе╗ещб╝длдщд╬╝┴╠фд╦┬╨▒■д╣ды╚п╕└бддкдшд╙бдд╜д╬ележеєе╗ещб╝д╬╚п╕└длдщбдепещедеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└дЄ┤▐дсд╞д╜дьд╛дь┴░╕х3╚п╕└д║д─дЄ╔┴▓шд╣дыдшджд╦е╫еэе░ещерд╖д┐бед─д▐дъбдепещедеиеєе╚д╬╚п╕└дм┴░╕х2╚п╕└д║д─бдележеєе╗ещб╝д╬╚п╕└дм3╚п╕└╔╜╝ид╡дьд╞дддыдшджд╦д╖д┐бе
 
 %\subsubsection{едеєе┐ещепе╞еге╓└н}
-%д▐д┐бд─є░╞е╖е╣е╞ер1д╦дкддд╞д╧едеєе┐ещепе╞еге╓└ндмд╩длд├д┐бе│╞├▒╕ьдЄепещедеиеєе╚д╬╧├┬ъд╬╩м╠юд┤д╚д╦дяд▒дые┴езе├епе▄е├епе╣д╦д─ддд╞бд─є░╞е╖е╣е╞ер1д╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бдг▒▓єг▒▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞ддд┐бе
+%д▐д┐бд─є░╞е─б╝еы1д╦дкддд╞д╧едеєе┐ещепе╞еге╓└ндмд╩длд├д┐бе│╞├▒╕ьдЄепещедеиеєе╚д╬╧├┬ъд╬╩м╠юд┤д╚д╦дяд▒дые┴езе├епе▄е├епе╣д╦д─ддд╞бд─є░╞е─б╝еы1д╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бдг▒▓єг▒▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞ддд┐бе
 
-%д╖длд╖─є░╞е╖е╣е╞ер2д╟д╧бде╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыдшджд╦▓■┴▒д╖д┐бед▐д┐бдепещедеиеєе╚д╬╧├┬ъд╬╩м╠юдЄ│╞├▒╕ьд┤д╚д╦╖шдс┬╟д┴д╖д┐дтд╬д└д▒д╟д╩дпбд╖шдс┬╟д┴д╖д╞ддд╩дддтд╬д╦┤╪д╖д╞дт┴к┬Є╗шдЄ╔╜╝ид╖┴к┬Єд╟дндыдшджд╦д╖д┐бе
+%д╖длд╖─є░╞е─б╝еы2д╟д╧бде╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыдшджд╦▓■┴▒д╖д┐бед▐д┐бдепещедеиеєе╚д╬╧├┬ъд╬╩м╠юдЄ│╞├▒╕ьд┤д╚д╦╖шдс┬╟д┴д╖д┐дтд╬д└д▒д╟д╩дпбд╖шдс┬╟д┴д╖д╞ддд╩дддтд╬д╦┤╪д╖д╞дт┴к┬Є╗шдЄ╔╜╝ид╖┴к┬Єд╟дндыдшджд╦д╖д┐бе
 
 
 %\subsubsection{б╓│лдлдьд┐╝┴╠фб╫бжб╓╩─д╕дщдьд┐╝┴╠фб╫бжб╓д╜д╬┬╛б╫}
-%д╡дщд╦─є░╞е╖е╣е╞ерд╟д╧бдележеєе╗ещб╝длдщд╬│╞╝┴╠фд╦дкддд╞дтбд5W1Hб╓ддд─б╫б╓д╔д│д╟б╫б╓├пдмб╫б╓▓┐дЄб╫б╓д╔д╬дшджд╦б╫б╓д╔джд╖д┐б╫д╩д╔д╟╠фдядьдыдшджд╩б╓│лдлдьд┐╝┴╠фб╫д╩д╬длбдYes/Noд╟┼·дидщдьдыбддвдыддд╧░ь╕└д└д▒д╟┤╩├▒┼·дидщдьдыдшджд╩б╓╩─д╕дщдьд┐╝┴╠фб╫д╩д╬длбддвдыддд╧╠╡┬╠╧├бж┴ъ─╚д╩д╔бдд╔д┴дщд╦дт╩м╬рд╡дьд╩дддшджд╩б╓д╜д╬┬╛б╫д╩д╬длдЄбдецб╝е╢б╝дм╝ъ╞░д╟╜д└╡д╟дндыдшджд╦д╖д┐бе
+%д╡дщд╦─є░╞е─б╝еыд╟д╧бдележеєе╗ещб╝длдщд╬│╞╝┴╠фд╦дкддд╞дтбд5W1Hб╓ддд─б╫б╓д╔д│д╟б╫б╓├пдмб╫б╓▓┐дЄб╫б╓д╔д╬дшджд╦б╫б╓д╔джд╖д┐б╫д╩д╔д╟╠фдядьдыдшджд╩б╓│лдлдьд┐╝┴╠фб╫д╩д╬длбдYes/Noд╟┼·дидщдьдыбддвдыддд╧░ь╕└д└д▒д╟┤╩├▒┼·дидщдьдыдшджд╩б╓╩─д╕дщдьд┐╝┴╠фб╫д╩д╬длбддвдыддд╧╠╡┬╠╧├бж┴ъ─╚д╩д╔бдд╔д┴дщд╦дт╩м╬рд╡дьд╩дддшджд╩б╓д╜д╬┬╛б╫д╩д╬длдЄбдецб╝е╢б╝дм╝ъ╞░д╟╜д└╡д╟дндыдшджд╦д╖д┐бе
 
-%ележеєе╗ещб╝длдщд╬│╞╝┴╠фд╦дкддд╞бдд╜дьд╛дьб╓│лдлдьд┐╝┴╠фб╫бжб╓╩─д╕дщдьд┐╝┴╠фб╫бжб╓д╜д╬┬╛б╫д╬┴к┬Є╗шдм╔╜╝ид╡дьбд─є░╞е╖е╣е╞ер1д╟═╜┬мд╡дьд┐┴к┬Є╗шд╦двдщдлд╕дсе┴езе├епдм╞■д├д╞дддыдшдже╫еэе░ещерд╖д┐бед╜д╖д╞бд│╞├▒╕ьдЄепещедеиеєе╚д╬╧├┬ъд╬╩м╠юд┤д╚д╦дяд▒дые┴езе├епе▄е├епе╣д╚╞▒══д╦бде╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыдшджд╦д╖д┐бе
+%ележеєе╗ещб╝длдщд╬│╞╝┴╠фд╦дкддд╞бдд╜дьд╛дьб╓│лдлдьд┐╝┴╠фб╫бжб╓╩─д╕дщдьд┐╝┴╠фб╫бжб╓д╜д╬┬╛б╫д╬┴к┬Є╗шдм╔╜╝ид╡дьбд─є░╞е─б╝еы1д╟═╜┬мд╡дьд┐┴к┬Є╗шд╦двдщдлд╕дсе┴езе├епдм╞■д├д╞дддыдшдже╫еэе░ещерд╖д┐бед╜д╖д╞бд│╞├▒╕ьдЄепещедеиеєе╚д╬╧├┬ъд╬╩м╠юд┤д╚д╦дяд▒дые┴езе├епе▄е├епе╣д╚╞▒══д╦бде╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыдшджд╦д╖д┐бе
 
 
 %\subsubsection{б╓д╜д╬┬╛б╫}
-%б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбд┴ъ─╚дф└д┤╓╧├д╩д╔дЄ┤▐дрб╓д╜д╬┬╛б╫дЄ└▀д▒дыд┘днд╚╗╪┼жд╡дьд┐д╬д╟бд─є░╞е╖е╣е╞ерг▒д╬╗┼┴╚д▀д╦дкддд╞б╓│лдлдьд┐╝┴╠фб╫д╚╚╜─ъд╡дьд╩длд├д┐ележеєе╗ещб╝д╬╚п╕└д╬джд┴бд╜к╜ї╗ьб╓длб╫дЄ┤▐дрдтд╬дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╚д╖бдд╜дь░╩│░дЄб╓д╜д╬┬╛б╫д╚д╖д┐бе
+%б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбд┴ъ─╚дф└д┤╓╧├д╩д╔дЄ┤▐дрб╓д╜д╬┬╛б╫дЄ└▀д▒дыд┘днд╚╗╪┼жд╡дьд┐д╬д╟бд─є░╞е─б╝еыг▒д╬╗┼┴╚д▀д╦дкддд╞б╓│лдлдьд┐╝┴╠фб╫д╚╚╜─ъд╡дьд╩длд├д┐ележеєе╗ещб╝д╬╚п╕└д╬джд┴бд╜к╜ї╗ьб╓длб╫дЄ┤▐дрдтд╬дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╚д╖бдд╜дь░╩│░дЄб╓д╜д╬┬╛б╫д╚д╖д┐бе
 
 %д▐д┐бд└╤д▀╜┼д═└▐дь└■е░еще╒╛хд╦дкддд╞бдб╓╩─д╕дщдьд┐╝┴╠фб╫дЄ╟╗дде░еьб╝┐зд╬╜─╦└д╟бдб╓д╜д╬┬╛б╫дЄ╟Ўдде░еьб╝┐зд╬╜─╦└д╟╔┴▓шд╖д┐бе
 
 
 %\subsubsection{еще╕еке▄е┐еє╔╜╝и╗■┤╓}
 
-%─є░╞е╖е╣е╞ер1д╦дкддд╞ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыд╬╞╔д▀╣■д▀│л╗╧длдщ┴к┬Є╗шд╬╔╜╝ид▐д╟д╦╠є10╔├длдлд├д╞ддд┐д╬дЄбд─є░╞е╖е╣е╞ер2д╦дкддд╞д╧╔м═╫╗■┤╓╠є4╔├д╦д▐д╟═▐дид┐бе
+%─є░╞е─б╝еы1д╦дкддд╞ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыд╬╞╔д▀╣■д▀│л╗╧длдщ┴к┬Є╗шд╬╔╜╝ид▐д╟д╦╠є10╔├длдлд├д╞ддд┐д╬дЄбд─є░╞е─б╝еы2д╦дкддд╞д╧╔м═╫╗■┤╓╠є4╔├д╦д▐д╟═▐дид┐бе
 
 
 
@@ -139,14 +139,14 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %   \begin{center}
 %     \includegraphics[width=10cm]{2_mogi.png}
 %   \end{center}
-%   \caption{─є░╞е╖е╣е╞ерг▓д╬╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠}
+%   \caption{─є░╞е─б╝еыг▓д╬╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠}
 %   \label{fig:2_mogi}
 % \end{figure}
 % \begin{figure}
 %   \begin{center}
 %     \includegraphics[width=10cm]{2_0801.png}
 %   \end{center}
-%   \caption{─є░╞е╖е╣е╞ерг▓д╬X╟п8╖юепещедеиеєе╚Cе╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠}
+%   \caption{─є░╞е─б╝еыг▓д╬X╟п8╖юепещедеиеєе╚Cе╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠}
 %   \label{fig:2_0801}
 % \end{figure}
 %
@@ -183,22 +183,22 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
-%\section{─є░╞е╖е╣е╞ерг│}
+%\section{─є░╞е─б╝еыг│}
 
 
-%─є░╞е╖е╣е╞ер2д╟ележеєе╗ещб╝длдщд╡дьд┐╗╪┼ждЄ╕╡д╦бд─є░╞е╖е╣е╞ер3дЄ║ю└од╖д┐бе
-
-
-
+%─є░╞е─б╝еы2д╟ележеєе╗ещб╝длдщд╡дьд┐╗╪┼ждЄ╕╡д╦бд─є░╞е─б╝еы3дЄ║ю└од╖д┐бе
 
 
 
-%д│д│д╟д╧╝чд╦бд─є░╞е╖е╣е╞ер2дм╩·дид╞ддд┐╠ф┬ъд╪д╬┬╨╜шд╦д─ддд╞╜╥д┘дыбе
+
+
+
+%д│д│д╟д╧╝чд╦бд─є░╞е─б╝еы2дм╩·дид╞ддд┐╠ф┬ъд╪д╬┬╨╜шд╦д─ддд╞╜╥д┘дыбе
 
 
 %\subsubsection{б╓▓Є╝сб╫бжб╓┴ъ─╚б╫бжб╓╠╡┬╠╧├б╫}
-%─є░╞е╖е╣е╞ер2д╦дкддд╞бдепещедеиеєе╚д╬╚п╕└д╦д─ддд╞├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╖д╞ддд┐бе
-%д╜д│длдщд╡дщд╦бд─є░╞е╖е╣е╞ер3д╦дкддд╞д╧бдележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓д╜д╬┬╛б╫дЄ└▀д▒бдд╡дщд╦б╓д╜д╬┬╛б╫дЄб╓▓Є╝сб╫б╓┴ъ─╚б╫б╓╠╡┬╠╧├б╫д╬3д─д╦╩м╬рд╖д┐бе
+%─є░╞е─б╝еы2д╦дкддд╞бдепещедеиеєе╚д╬╚п╕└д╦д─ддд╞├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╖д╞ддд┐бе
+%д╜д│длдщд╡дщд╦бд─є░╞е─б╝еы3д╦дкддд╞д╧бдележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓д╜д╬┬╛б╫дЄ└▀д▒бдд╡дщд╦б╓д╜д╬┬╛б╫дЄб╓▓Є╝сб╫б╓┴ъ─╚б╫б╓╠╡┬╠╧├б╫д╬3д─д╦╩м╬рд╖д┐бе
 
 
 
@@ -216,7 +216,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 %\subsection{╖ы▓╠}
 
-%─є░╞е╖е╣е╞ер3дЄележеєе╗ещб╝1╠╛д╦╗╚д├д╞ддд┐д└днбд░╩▓╝д╬е│есеєе╚дЄддд┐д└ддд┐бе
+%─є░╞е─б╝еы3дЄележеєе╗ещб╝1╠╛д╦╗╚д├д╞ддд┐д└днбд░╩▓╝д╬е│есеєе╚дЄддд┐д└ддд┐бе
 %\begin{itemize}
 % \item б╓╝┴╠ф╖┴╝░дм▓Є╝сбд╠╡┬╠╧├ д╬г▓╝я╬рд╖длд╩ддд┐дсбд┼м└┌д╩╩м╬рдмд╟днд▐д╗дєд╟д╖д┐бе
  
@@ -257,13 +257,13 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %╬удид╨б╓д█дєд╚д╦бд─лдт├ыдт╕л─едщдьд╞д╩ддд├д╞ддд├д┐дщ╩╤д╩╕└дд╩¤д╟д╣д▒д╔бд┐йд┘д┐
 %ддд╚днд╦┐йд┘дьды╛ї╢╖д├д╞ддджд╬дмд╣д┤дп╡╫д╖д╓дъд╟бдд╩дєдл╝л╩мд╟дтд╔джд╩дє
 %длд╩д├д╞ддджд╬дмдвд├д┐дєд╟д╣д▒д╔бд░╒│░д╚╔с─╠д╦д╟днд┐д▀д┐ддд╩б╩╛╨б╦д╜дьд╧
-%бддвдъд▐д╣д═бжбжбжд╩дєдл░ждмддд┐дщ┐йд┘д╩дндуддд▒д╩длд├д┐дъд╚длд╣дыд╖б╫д╚дддж╩╕д╦┬╨д╖д╞бдб╓бжбжбжб╫дшдъ┴░д╬╔Ї╩мд╧б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫д╬д╔д╬╩м╬рд╦дт┬░д╡д║бдб╓бжбжбжб╫дшдъ╕хд╬╔Ї╩мд╧б╓░жб╫д╦┬░д╣дыдмбде╫еэе╚е┐еде╫е╨б╝е╕ечеєд╦дкддд╞д╧б╓бжбжбжб╫дЄб╓беб╫д╬дшджд╩1╩╕1╩╕д╬╢ш└┌дь╠▄д╦└▀─ъд╖д╞д╩ддд╬д╟бд╢ш╩╠д╖д┐╚╜─ъ╩╤╣╣дм─є░╞е╖е╣е╞ерецб╝е╢б╝┬жд╟д╟днд╩ддбе
+%бддвдъд▐д╣д═бжбжбжд╩дєдл░ждмддд┐дщ┐йд┘д╩дндуддд▒д╩длд├д┐дъд╚длд╣дыд╖б╫д╚дддж╩╕д╦┬╨д╖д╞бдб╓бжбжбжб╫дшдъ┴░д╬╔Ї╩мд╧б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫д╬д╔д╬╩м╬рд╦дт┬░д╡д║бдб╓бжбжбжб╫дшдъ╕хд╬╔Ї╩мд╧б╓░жб╫д╦┬░д╣дыдмбде╫еэе╚е┐еде╫е╨б╝е╕ечеєд╦дкддд╞д╧б╓бжбжбжб╫дЄб╓беб╫д╬дшджд╩1╩╕1╩╕д╬╢ш└┌дь╠▄д╦└▀─ъд╖д╞д╩ддд╬д╟бд╢ш╩╠д╖д┐╚╜─ъ╩╤╣╣дм─є░╞е─б╝еыецб╝е╢б╝┬жд╟д╟днд╩ддбе
 
 %б╓бжбжбжб╫дЄ
 
 
 
-2016╟п1╖юд╬б╓┐┤д╬▓─╗ы▓╜╕ж╡ц▓ёб╫д╦д╞бд12╠╛д╬└ь╠ч▓╚д╦╦▄е╖е╣е╞ердЄ╕лд╞ддд┐д└днбде│есеєе╚дЄддд┐д└ддд┐бед╜д╬е│есеєе╚дЄ╕╡д╦бд░╩▓╝д╦╜╥д┘дые╖е╣е╞ер═╫╖ядЄ├ъ╜╨д╖д┐бе
+2016╟п1╖юд╬б╓┐┤д╬▓─╗ы▓╜╕ж╡ц▓ёб╫д╦д╞бд12╠╛д╬└ь╠ч▓╚д╦╦▄е─б╝еыдЄ╕лд╞ддд┐д└днбде│есеєе╚дЄддд┐д└ддд┐бед╜д╬е│есеєе╚дЄ╕╡д╦бд░╩▓╝д╦╜╥д┘дые─б╝еы═╫╖ядЄ├ъ╜╨д╖д┐бе
 \begin{itemize}
 
 \item д╔д│дмд╔д╬╚п╕└дЄ╔╜д╖д╞дддыдлдядлдщд╩ддбдд▐д┐еще╕еке▄е┐еєдм┬┐д╣дод╞е░еще╒дм▓╝д╬╩¤д╦дддп
@@ -316,7 +316,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 ╩╕╗·┐зд╦д─ддд╞╝бд╬е│есеєе╚дЄддд┐д└ддд┐бе
 б╓╩╕╗·д╬┐зд╟д╣дмбд▓л┐зд╚│е┐зд╧бде╨е├епд╬╟Єд╚длд╓д├д╞╕лдид╦дпдпд╩д├
 д╞дддыд╚╗╫ддд▐д╣бе╗фд╬ете╦е┐б╝д╬е╓еыб╝ещеде╚еле├е╚д╬▒╞╢┴длдтд╖дьд▐д╗дєдмбд
-╞├д╦▓л┐зд╧╕лдид▐д╗дєд╟д╖д┐бедшд├д╞бд┐здЄ╩╤дид╞ддд┐д└д▒дыд╚╜їдлдъд▐д╣беб╫д╖д┐дмд├д╞бд╦▄е╖е╣е╞ерд╬бд╞├д╦ележеєе╗ещб╝д╦┤╪д╣ды╜─╦└дф╝┬║▌д╬╡н╜╥д╬╔┴▓шд╦дкддд╞▓■┴▒д╣ды╔м═╫дмдвдыбе
+╞├д╦▓л┐зд╧╕лдид▐д╗дєд╟д╖д┐бедшд├д╞бд┐здЄ╩╤дид╞ддд┐д└д▒дыд╚╜їдлдъд▐д╣беб╫д╖д┐дмд├д╞бд╦▄е─б╝еыд╬бд╞├д╦ележеєе╗ещб╝д╦┤╪д╣ды╜─╦└дф╝┬║▌д╬╡н╜╥д╬╔┴▓шд╦дкддд╞▓■┴▒д╣ды╔м═╫дмдвдыбе
 
 \item 
 └╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞бд╜─╝┤▓г╝┤дм▓┐дЄ╔╜д╖д╞дддыдлдядлдщд╩ддд╬д╟бд╝┤дЄ╔╜╝ид╣дыдшджд╦╡сдсдщдьд┐бе
