--- a/chapter7.tex
+++ b/chapter7.tex
@@ -1,6 +1,6 @@
 
 
-2016年1月の「心の可視化研究会」では，可視化の専門家，心理学の専門家など12名の方に本システムのプロトタイプを見ていただき，アイデアに関して概ね良い評価をいただいた．本システムの目的は，ベテランからビギナーへのカウンセリング指導において，どのような質問をビギナーのカウンセラーがクライエントに投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」に関する回答を引き出せたかが，ベテランのカウンセラーにとってすぐにわかるようになることであったが，コレに関して根本的には達成したと考える．
+2016年1月の「心の可視化研究会」では，可視化の専門家，心理学の専門家など12名の方に本ツールのプロトタイプを見ていただき，アイデアに関して概ね良い評価をいただいた．本ツールの目的は，ベテランからビギナーへのカウンセリング指導において，どのような質問をビギナーのカウンセラーがクライエントに投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」に関する回答を引き出せたかが，ベテランのカウンセラーにとってすぐにわかるようになることであったが，コレに関して根本的には達成したと考える．
 
 
 ただし前章で述べたとおり保存機能が求められているなど，ビギナーのカウンセラー指導に対して実用的なものになるにはまだまだステップを必要とすると考える．
