--- a/chapter2.tex
+++ b/chapter2.tex
@@ -2,7 +2,7 @@
 
 
 
-KH Coderд╚д╧бде╞ене╣е╚╩╕╛╧╖┐д╬е╟б╝е┐дЄ┼¤╖╫╩м└╧д╣дыд┐дсд╬е╒еъб╝д╬е╜е╒е╚ежезевд╟двдыбеевеєе▒б╝е╚д╬╝л═│╡н╜╥бжедеєе┐е╙ехб╝╡н╧┐бж┐╖╩╣╡н╗Ўд╩д╔бдд╡д▐д╢д▐д╩╝╥▓ё─┤║║е╟б╝е┐дЄ╩м└╧д╣дыд┐дсбд╬й╠┐┤█┬ч│╪д╬╚ї╕¤╣╠░ь╗сдм└й║юд╖д┐дтд╬д╟двдыбе╖╫╬╠е╞ене╣е╚╩м└╧д▐д┐д╧е╞ене╣е╚е▐еде╦еєе░д╬╩¤╦бд╦┬╨▒■д╖д╞ддды\cite{kh1}бе┐∙▒║дщ\cite{kango}д╧└о┐═┤╟╕ю│╪│╡╧└д╬└о─╣╩є╣Ё╜ёд╦KH Coderд╬├▒╕ь╢ж╡пе═е├е╚еяб╝еп┐▐╡б╟╜дЄ┼м═╤д╣дыд│д╚д╟бд└о┐═┤╟╕ю│╪│╡╧└д╦е╫еэе╕езепе╚│╪╜мдЄ║╬═╤д╖д┐╕·▓╠дЄ╠└дщдлд╦д╖д┐бе
+KH Coderд╚д╧бде╞ене╣е╚╩╕╛╧╖┐д╬е╟б╝е┐дЄ┼¤╖╫╩м└╧д╣дыд┐дсд╬е╒еъб╝д╬е╜е╒е╚ежезевд╟двдыбеевеєе▒б╝е╚д╬╝л═│╡н╜╥бжедеєе┐е╙ехб╝╡н╧┐бж┐╖╩╣╡н╗Ўд╩д╔бдд╡д▐д╢д▐д╩╝╥▓ё─┤║║е╟б╝е┐дЄ╩м└╧д╣дыд┐дсбд╬й╠┐┤█┬ч│╪д╬╚ї╕¤дм│л╚пд╖д┐дтд╬д╟двдыбе╖╫╬╠е╞ене╣е╚╩м└╧д▐д┐д╧е╞ене╣е╚е▐еде╦еєе░д╬╩¤╦бд╦┬╨▒■д╖д╞ддды\cite{kh1}бе┐∙▒║дщ\cite{kango}д╧└о┐═┤╟╕ю│╪│╡╧└д╬└о─╣╩є╣Ё╜ёд╦KH Coderд╬├▒╕ь╢ж╡пе═е├е╚еяб╝еп┐▐╡б╟╜дЄ┼м═╤д╣дыд│д╚д╟бд└о┐═┤╟╕ю│╪│╡╧└д╦е╫еэе╕езепе╚│╪╜мдЄ║╬═╤д╖д┐╕·▓╠дЄ╠└дщдлд╦д╖д┐бе
 
 
 %░╩▓╝д╦бдKH Coderд╬╝чд╩▓─╗ы▓╜е─б╝еыд╦д─ддд╞╛╥▓Ёд╣дыбе
@@ -10,7 +10,8 @@ KH Coderд╚д╧бде╞ене╣е╚╩╕╛╧╖┐д╬е╟б╝е┐дЄ┼¤╖╫╩м└╧д╣дыд┐дсд╬е╒еъб╝д╬е╜е╒е╚ежезевд╟дв
 
 %\subsection{├▒╕ь╢ж╡пе═е├е╚еяб╝еп┐▐}
 
-KH Coderд╧бд┼¤╖╫╖╫╗╗д╚е░еще╒еге├епе╣д╬д┐дсд╬┤─╢нб╓Rб╫дЄ╞т╔Їд╟▓Є└╧д╦═°═╤д╖д╞дддыбеKH Coderд╟╖┴┬╓┴╟▓Є└╧╕хд╬е╟б╝е┐д╬╢ж╡пе═е├е╚еяб╝еп▓─╗ы▓╜дЄ╣╘джд╦двд┐дъбдд╔д│длдщд╔д│д▐д╟д╬╚╧░╧╞тд╟╢ж╡пд╣дьд╨╢ж╡п╚╜─ъдЄ╣╘дждлд╚дддж╜╕╖╫├▒░╠дЄKH Coder╛хд╟└▀─ъ▓─╟╜д╟двдыбеKH Coderд╧▓■╣╘д╦дшд├д╞├╩═юдЄ╟з╝▒д╖бд╢ч┼└д╦дшд├д╞╩╕дЄ╟з╝▒д╣дыбедшд├д╞д╥д╚├╩═юд╩ддд╖░ь╩╕дЄ╜╕╖╫├▒░╠д╚д╖д╞└▀─ъд╣дыд│д╚дм▓─╟╜д╦д╩д├д╞дддыбе\cite{manu}
+%KH Coderд╧бд┼¤╖╫╖╫╗╗д╚е░еще╒еге├епе╣д╬д┐дсд╬┤─╢нб╓Rб╫дЄ╞т╔Їд╟▓Є└╧д╦═°═╤д╖д╞дддыбеKH Coderд╟╖┴┬╓┴╟▓Є└╧╕хд╬е╟б╝е┐д╬╢ж╡пе═е├е╚еяб╝еп▓─╗ы▓╜дЄ╣╘джд╦двд┐дъбдд╔д│длдщд╔д│д▐д╟д╬╚╧░╧╞тд╟╢ж╡пд╣дьд╨╢ж╡п╚╜─ъдЄ╣╘дждлд╚дддж╜╕╖╫├▒░╠дЄKH Coder╛хд╟└▀─ъ▓─╟╜д╟двдыбе
+KH Coderд╧▓■╣╘д╦дшд├д╞├╩═юдЄ╟з╝▒д╖бд╢ч┼└д╦дшд├д╞╩╕дЄ╟з╝▒д╣дыбедшд├д╞д╥д╚├╩═юд╩ддд╖░ь╩╕дЄ╜╕╖╫├▒░╠д╚д╖д╞└▀─ъд╣дыд│д╚дм▓─╟╜д╦д╩д├д╞дддыбе\cite{manu}
 
 KH Coderд╬е╟есеъе├е╚д╚д╖д╞бд
 \begin{itemize}
@@ -65,6 +66,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %д╜д╬дшджд╩╧├┬ъд╧╗■┤╓┴┤┬╬д╟░ь══д╦│фдщдьдыдлдтд╖дьд╩дпд╞бдд╟д╩д▒дьд╨бд╕Є┬╪д╣дыдлдтд╖дьд╩ддбед╜д╖д╞бд░█д╩дыеде┘еєе╚дЄе╧едещеде╚д╣дыбе
 
 %╩м╬Ўдм┼╡╖┐┼кд╩е╤ещесб╝е┐д╬░╒╠г╧└┼кд╩░ьд─длещеєе└ерд╩┐═╣й╔╩д╟двдыдлд╔дждл╖шдсдыд╬д╦бдд│д╬╢ш╩╠д╧бдецб╝е╢б╝дм╠Є╬йд─д│д╚дмд╟дндыбе
+
 
 
 
