--- a/chapter1.tex
+++ b/chapter1.tex
@@ -8,9 +8,9 @@
 
 そこで，ベテランのカウンセラーがビギナーのカウンセラーに指導する機会が設けられている．たとえば今回書き起こしテキストデータを使用した「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では，ビギナーのカウンセラーに対してカウンセリングに関するアドバイスがなされている．
 
-ただし現状では，クライエントとビギナーのカウンセラーとのカウンセリング内容を動画で撮影し，その動画書き起こされたカウンセリング内容のテキストデータを，ベテランのカウンセラーらが目で読んで，議論をする，という流れである．そのため，ベテランのカウンセラーが全体を読んでからの各々カウンセリング内容を分析するという流れに，時間を要する．
+ただし現状では，クライエントとビギナーのカウンセラーとのカウンセリング内容を動画で撮影し，その動画書き起こされたカウンセリング内容のテキストデータを，ベテランのカウンセラーらが読んで，議論をする，という流れである．そのため，ベテランのカウンセラーが全体を読んでからの各々カウンセリング内容を分析するという流れに，時間を要する．
 
-そこで，本研究では，タイムライン形式の時間軸に沿った可視化によって，クライエントとビギナーのカウンセラーとの会話を可視化するWebツールを開発した．本提案ツールはベテランのカウンセラーをユーザーとして想定した．このツールをベテランのカウンセラーが使用することによって期待されることは，ベテランからビギナーへのカウンセリング指導において，ビギナーのカウンセラーがクライエントにどのような質問を投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」を引き出したかが，ベテランのカウンセラーにとってすぐにわかることである．
+そこで本研究では，タイムライン形式の時間軸に沿って，クライエントとビギナーのカウンセラーとの会話を可視化するWebツールを開発した．本提案ツールはベテランのカウンセラーをユーザーとして想定した．このツールをベテランのカウンセラーが使用することによって期待されることは，ベテランからビギナーへのカウンセリング指導において，ビギナーのカウンセラーがクライエントにどのような質問を投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」を引き出したかが，ベテランのカウンセラーにとってすぐにわかることである．
 
 
 
