--- a/main.tex
+++ b/main.tex
@@ -41,9 +41,11 @@
 
 \bibliographystyle{kueethesis} % まず，文献目録を掲載する tex ファイルを開き，プリアンブルに使用したい BibTeX のスタイルファイル(bstファイル)を指定します
 \bibliography{main}
-%\begin{thebibliography}{数字}
-%	\bibitem{ad2} HEINZ L. ANSBACHER, ROWENA R. ANSBACHER，THE INDIVIDUAL PSYCHOLOGY OF ALFRED ADLER，New York : Haper, Row, Publishers, Inc.，(1956).
-%	\bibitem{ad2} HEINZ L. ANSBACHER, ROWENA R. ANSBACHER，THE INDIVIDUAL PSYCHOLOGY OF ALFRED ADLER，New York : Haper, Row, Publishers, Inc.，(1956).
-%\end{thebibliography}
+\begin{thebibliography}{数字}
+	\bibitem{taskdriven} Eric Alexander and Michael Gleicher, Task-driven comparison of topic models,
+IEEE TRANSACTIONS ON VISUALIZATION AND COMPUTER GRAPH
+ICS, Vol. 22, No. 1, (2016), pp. 320-329.
+	\bibitem{ad2} HEINZ L. ANSBACHER, ROWENA R. ANSBACHER，THE INDIVIDUAL PSYCHOLOGY OF ALFRED ADLER，New York : Haper, Row, Publishers, Inc.，(1956).
+\end{thebibliography}
 
 \end{document}
